--- a/_posts/2018-03-14-有上下界的网络流略解.md
+++ b/_posts/2018-03-14-有上下界的网络流略解.md
@@ -1,309 +1,84 @@
 ---
-layout:     post
-title:      "有上下界的网络流略解"
-date:       2018-03-14
-author:     "Dispwnl"
-header-img: "img/used/1516875234512.jpg"
-catalog: true
+layout:		post
+title:		"有上下界的网络流略解"
+date:		2018-03-14
+author:		"Dispwnl"
+header-img:	"img/used/1516875234512.jpg"
+catalog:	false
 tags:
     - 网络流
     - 整理
 ---
-有上下界的网络流就是每条边都有一个$down$和$up$，然后流量$flow$必须满足$down\le flow\le up$
 
-一般类型分为两种
+>  原来整理的好像有点问题重新写了一下qwq
 
-- <strong>1.无源汇且保证流量平衡</strong>
-- <strong>2.有源汇且除了源点和汇点满足流量平衡</strong>
+有上下界的网络流就是每条边都有一个$l$和$r$，然后每条边的流量$flow$必须满足$l\le flow\le r$
 
-流量平衡就是指这个点流入的总流量=这个点流出的总流量
+一般分$4$种情况
 
-## 无源汇
-- ### 一个~~烂大街~~错误典例：
+### 无源汇可行流
 
-把原图的每一条边的容量设为$up-down$，在原图上求一遍最大流，再加上最大的$down$
+#### 一个~~烂大街~~的错误
 
-~~真这么简单的话我还写什么~~
+我会做这个！把每条边的容量设成$r-l​$，然后求最大流，答案加上最大的$l​$就完事了~~快夸我快夸我~~
 
-其实仔细想想就会发现有问题，一个最简单的例子：
+其实仔细想想就有问题，这样做不一定满足流量平衡
 
-![](/img/study/updownwangluoliu.png)
+#### 正确做法
 
-这个图的最大流是$1$，加上最大的$down$是$5$
+现在问题是如何满足容量平衡
 
-显然不满足流量平衡了
+假设现在不知道从哪来的一股流量$f​$把点$i​$补到流量平衡了，即有$\sum_{(a,i)\in E}l_{(a,i)}+f_{(a,i)}=\sum_{(i,b)\in E}l_{(i,b)}+f_{(i,b)}​$
 
-- ### 正确姿势
+发现可以移项，$\sum_{(a,i)\in E}l_{(a,i)}-\sum_{(i,b)\in E}l_{(i,b)}=\sum_{(i,b)\in E}f_{(i,b)}-\sum_{(a,i)\in E}f_{(a,i)}​$
 
-我们一条边一条边的处理
+式子左边的值（定为$v$）可以维护
 
-把每一条边$(u,v)$拆成两条边，容量分别是$down$和$up-down$
+- 如果$v> 0$，说明从$i$点流入的$f$大于从$i$点流出的$f$，网络流中只有源点和汇点不用满足流量平衡，所以新建源点$S'$，建边$(S',i,v)$
+- 如果$v<0$，说明从$i$点流出的$f$大于从$i$点流入的$f$，跟上面同理，新建汇点$T'$，建边$(i,T',-v)$
 
-然后yy一下，将容量为$down$的边先流满，然后在另一条边上随便流就行了
-
-现在主要问题是怎么让容量为$down$的边先流满
-
-我们考虑建立附源点和附汇点，附源点连$v$，容量为$down$，$u$连附汇点，容量也为$down$，然后跑附源点到附汇点的最大流
-
-如图：
-
-![](/img/study/updownwangluoliu2.png)
-
-因为源点发出流量，所以附源点连$v$的边一定能流满
-
-因为汇点接受流量，所以$u$连附汇点的边一定先被流满，然后再流另一条边
-
-这是一种理解，而还有一种理解：
-
-错误典例里错的原因是因为ta不满足流量平衡，那我们就让ta满足流量平衡
-
-还是建立附源点$S$和附汇点$T$，附源点用于补充流量，附汇点用于吸收流量，定义一个数组$f$为点$i$的流入量-流出量
-
-所以每加入一条边$(u,v)$，$f_u-=down,f_v+=down$
-
-然后分情况讨论：
-
-设此时点为$i$，若点$f_i>0$，说明这个点流入量>流出量，需要补充缺少的流出量
-
-所以建边$(S,i)$，容量为$f_i$
-
-若点$f_i<0$，说明这个点流入量<流出量，需要吸收多余的流出量
-
-所以建边$(i,T)$，容量为$f_i$,然后跑$S\rightarrow T$的最大流就行了
-
-其实这两种方法思想是一样的，就是建附加边和附加点来控制流量
+这样跑$S'​$到$T'​$的最大流，如果每条从$S'​$和每条连向$T'​$的边都满流了说明有解（都流量平衡了）
 
 [例题](http://acm.zju.edu.cn/onlinejudge/showProblem.do?problemCode=2314)
 
-这个题就是裸板子，就是多了个输出方案，注意有多组数据
+### 有源汇可行流
 
-## 有源汇
+因为源点和汇点不满足流量平衡，所以不能用无源汇的方法直接做……
 
-这种类型将$t,s$用一条容量为$inf$的边连起来就是无源汇的类型了
+那么把源点汇点改成流量平衡就好了
 
-- ### 求最大流
+源点只会发出流量，汇点只会接受流量，这两个点的流入流出是相等的
 
-有两种方法，一种是二分求解，比较好理解但时间复杂度高~~感觉好暴力~~
+所以只用建立边$(T,S,inf)$就能满足流量平衡了，总流量就是最后$(T,S)$的反向边流量
 
-主要讲讲第二种方法，这里用的上面第二种思路
+### 有源汇最大流
 
-建好边后（包括$t\rightarrow s$），跑一遍最大流，然后将有关附汇点和附源点以及$t\rightarrow s$的边拆掉
+我不仅要有上下界，还要有源汇！
 
-再跑一次最大流，答案就是两次最大流的和
+我不仅要有源汇，还要求最大！
 
-第一次最大流相当于在无源汇里跑，将附边尽可能的流满
+当然要跑一遍可行流来看是否有解
 
-如果跑完后附源点出发的边还有剩余流量，说明这个网络没有可行流
+如果$S'$发出的边和连向$T'​$的边都流满了，说明这些点都达到了流量平衡，却不一定是最大的，即某些点可以增加流量的情况下依然满足流量平衡
 
-因为附源点是补充流量，还有剩余流量说明无论如何都补不成流量平衡了
+发现求一遍可行流的残余网络相当于每个点都已经满足流量平衡的情况，因为这时候为了调节流量而建的$f$都已经满流，不能再继续发挥作用，这时候跑个$(T,S)$的最大流的答案加上刚才求一遍可行流的答案就是所求
 
-而第二次跑最大流是在满足最低条件的基础上跑的，就是纯粹只为求最大流量的最大流
+这里残余网络的$(T,S)$如果不删，答案就是这时跑个最大流的答案，因为可行流的答案都存在$(S,T)$里，跑最大流会把$(S,T)$里的流量推到$T$
 
-所以跑出来的流量+第一次的流量就是满足条件的最大流
+当然你甚至可以二分最大流$mid$，然后跑可行流判断，只要把$(T,S)$的容量定为$mid$即可，复杂度多个$log$不建议使用
 
-#### 代码
-```
-# include<iostream>
-# include<cstring>
-# include<cstdio>
-# include<queue>
-using namespace std;
-const int MAX=1e5+1,T=1e5,inf=1e8;
-struct p{
-	int x,y,dis;
-}c[MAX<<1];
-int n,m,num=2,s,t;
-int h[MAX],d[MAX],f[MAX];
-int read()
-{
-	int x=0;
-	char ch=getchar();
-	for(;!isdigit(ch);ch=getchar());
-	for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
-	return x;
-}
-void add(int x,int y,int dis)
-{
-	c[num]=(p){h[y],x,0},h[y]=num++;
-	c[num]=(p){h[x],y,dis},h[x]=num++;
-}
-bool bfs(int x,int y)
-{
-	queue<int> qu;
-	qu.push(x);
-	memset(d,0,sizeof(d));
-	d[x]=1;
-	while(!qu.empty())
-	{
-		int tt=qu.front();
-		qu.pop();
-		for(int i=h[tt];i;i=c[i].x)
-		  if(!d[c[i].y]&&c[i].dis)
-		  {
-		  	d[c[i].y]=d[tt]+1;
-		  	qu.push(c[i].y);
-		  }
-	}
-	return d[y];
-}
-int dfs(int x,int y,int dix)
-{
-	if(x==y||!dix) return dix;
-	int sum=0;
-	for(int i=h[x];i;i=c[i].x)
-	  if(d[c[i].y]==d[x]+1&&c[i].dis)
-	  {
-	  	int dis=dfs(c[i].y,y,min(c[i].dis,dix));
-	  	if(dis)
-	  	{
-	  		sum+=dis;
-	  		dix-=dis;
-	  		c[i].dis-=dis;
-	  		c[i^1].dis+=dis;
-	  		if(!dix) return sum;
-		}
-	  }
-	if(!sum) d[x]=-1;
-	return sum;
-}
-int dinic(int x,int y)
-{
-	int tot=0;
-	while(bfs(x,y))
-	tot+=dfs(x,y,inf);
-	return tot;
-}
-int main()
-{
-	n=read(),m=read(),s=read(),t=read();
-	for(int i=1;i<=m;i++)
-	  {
-	  	int x=read(),y=read(),l=read(),r=read();
-	  	int dis=r-l;
-	  	add(x,y,dis);
-	  	f[x]-=l,f[y]+=l;
-	  }
-	for(int i=1;i<=n;i++)
-	  if(f[i]>0) add(0,i,f[i]);
-	  else if(f[i]<0) add(i,T,-f[i]);
-	add(t,s,inf);
-	int tot=dinic(0,T);
-	for(int i=h[0];i;i=c[i].x)
-	  if(c[i].dis)
-	  {
-	  	printf("I Am Just Joking.");
-	  	return 0;
-	  }
-	for(int i=2;i<num;i++)
-	  if(c[i].y==T||!c[i].y||i==num-1)
-	  c[i].dis=c[i^1].dis=0;
-	h[0]=h[T]=0;
-	printf("%d",tot+dinic(s,t));
-	return 0;
-}
-```
-- ### 求最小流
+### 有源汇最小流
 
-这个好说多了
+我不仅要有上下界，还要有源汇！
 
-我们先不建$t\rightarrow s$的边，直接跑附源点到附汇点的最大流，这次最大流让全网络的边尽可能的流满
+我不仅要有源汇，还要求最小！
 
-然后建上$t\rightarrow s$的边，再跑一遍附源点到附汇点的最大流
+当然要跑一遍可行流来看是否有解
 
-此时$t\rightarrow s$的反向边上的流量就是$s\rightarrow t$的最小流，因为满足流量平衡，所以$t\rightarrow s$的流量$=s\rightarrow t$的流量
+因为反向边流量增加相当于正向边流量减少，所以求最小流相当于求减少的最大流（？）
 
-还有判断是否存在可行流，先记录$f_i>0$的总和，然后总和减去两次最大流的流量，若总量不为$0$，说明满足流量平衡的最低条件没有满足，所以不存在可行流
+还是残余网络，跟最大流一个道理，求一遍从$T$到$S$的最大流相当于满足流量平衡的条件下尽量减少流量，刚才求一遍可行流的答案减去这时候跑个$(T,S)$的最大流的答案就是所求
 
-#### 代码
-```
-# include<iostream>
-# include<cstring>
-# include<cstdio>
-# include<queue>
-using namespace std;
-const int MAX=1e5+1,T=1e5,inf=1e8;
-struct p{
-	int x,y,dis;
-}c[MAX<<1];
-int n,m,num=2,s,t;
-int h[MAX],d[MAX],f[MAX];
-int read()
-{
-	int x=0;
-	char ch=getchar();
-	for(;!isdigit(ch);ch=getchar());
-	for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
-	return x;
-}
-void add(int x,int y,int dis)
-{
-	c[num]=(p){h[y],x,0},h[y]=num++;
-	c[num]=(p){h[x],y,dis},h[x]=num++;
-}
-bool bfs(int x,int y)
-{
-	queue<int> qu;
-	qu.push(x);
-	memset(d,0,sizeof(d));
-	d[x]=1;
-	while(!qu.empty())
-	{
-		int tt=qu.front();
-		qu.pop();
-		for(int i=h[tt];i;i=c[i].x)
-		  if(!d[c[i].y]&&c[i].dis)
-		  {
-		  	d[c[i].y]=d[tt]+1;
-		  	qu.push(c[i].y);
-		  }
-	}
-	return d[y];
-}
-int dfs(int x,int y,int dix)
-{
-	if(x==y||!dix) return dix;
-	int sum=0;
-	for(int i=h[x];i;i=c[i].x)
-	  if(d[c[i].y]==d[x]+1&&c[i].dis)
-	  {
-	  	int dis=dfs(c[i].y,y,min(c[i].dis,dix));
-	  	if(dis)
-	  	{
-	  		sum+=dis;
-	  		dix-=dis;
-	  		c[i].dis-=dis;
-	  		c[i^1].dis+=dis;
-	  		if(!dix) return sum;
-		}
-	  }
-	if(!sum) d[x]=-1;
-	return sum;
-}
-int dinic(int x,int y)
-{
-	int tot=0;
-	while(bfs(x,y)) tot+=dfs(x,y,inf);
-	return tot;
-}
-int main()
-{
-	n=read(),m=read(),s=read(),t=read();
-	int tot=0;
-	for(int i=1;i<=m;i++)
-	  {
-	  	int x=read(),y=read(),l=read(),r=read();
-	  	int dis=r-l;
-	  	add(x,y,dis);
-	  	f[x]-=l,f[y]+=l;
-	  }
-	for(int i=1;i<=n;i++)
-	  if(f[i]>0) add(0,i,f[i]),tot+=f[i];
-	  else if(f[i]<0) add(i,T,-f[i]);
-	tot-=dinic(0,T);
-	add(t,s,inf);
-	tot-=dinic(0,T);
-	if(tot) printf("I Am Just Joking.");
-	else printf("%d",c[num-2].dis);
-	return 0;
-}
-```
+当然二分也是可以的……
+
+就这样吧
