--- a/_posts/2018-03-14-有上下界的网络流略解.md
+++ b/_posts/2018-03-14-有上下界的网络流略解.md
@@ -87,6 +87,8 @@ tags:
 
 还是残余网络，跟最大流一个道理，求一遍从$T$到$S$的最大流相当于满足流量平衡的条件下尽量减少流量，刚才求一遍可行流的答案减去这时候跑个$(T,S)$的最大流的答案就是所求
 
+注意这里要是不删去$(T,S)$边的话答案就是$inf$减去跑$T$到$S$的最大流
+
 当然二分也是可以的……
 
 就这样吧
