--- a/_posts/2018-06-19-[AHOI2001]多项式乘法.md
+++ b/_posts/2018-06-19-[AHOI2001]多项式乘法.md
@@ -6,7 +6,7 @@ author:     "Dispwnl"
 header-img: "img/used/10.jpg"
 catalog: true
 tags:
-    - FFT
+    - FFT/NTT
 ---
 ## [题目](https://www.luogu.org/problemnew/show/P2553)
 ### 题目描述
