--- a/_posts/2018-06-20-[BZOJ4259]残缺的字符串.md
+++ b/_posts/2018-06-20-[BZOJ4259]残缺的字符串.md
@@ -7,7 +7,7 @@ header-img: "img/used/9.jpg"
 catalog: true
 tags:
     - 瞎搞
-    - FFT
+    - FFT/NTT
 ---
 ## [题目](https://lydsy.com/JudgeOnline/problem.php?id=4259)
 ### Description
