--- a/_posts/2019-02-25-[AH2017]礼物.md
+++ b/_posts/2019-02-25-[AH2017]礼物.md
@@ -6,7 +6,7 @@ author:		"Dispwnl"
 header-img:	"img/used/56788.jpg"
 catalog:	false
 tags:
-    - FFT
+    - FFT/NTT
 ---
 ## [题目](https://www.luogu.org/problemnew/show/P3723)
 ### 题目描述
