--- a/_posts/2019-02-25-[BZOJ3451]Normal.md
+++ b/_posts/2019-02-25-[BZOJ3451]Normal.md
@@ -7,7 +7,7 @@ header-img:	"img/used/54554.jpg"
 catalog:	false
 tags:
     - 点分治
-    - FFT
+    - FFT/NTT
 ---
 
 ## [题目](https://lydsy.com/JudgeOnline/problem.php?id=3451)
