--- a/_posts/2019-02-26-[ZJOI2014]力.md
+++ b/_posts/2019-02-26-[ZJOI2014]力.md
@@ -4,6 +4,9 @@ title:		"[ZJOI2014]力"
 date:		2019-02-26
 author:		"Dispwnl"
 header-img:	"img/used/679670.jpg"
+catalog:	false
+tags:
+    - FFT/NTT
 ---
 
 ## [题目](https://www.luogu.org/problemnew/show/P3338)
