--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -813,5 +813,35 @@ $fuge$：你确定？我加了还是<code>CE</code>啊
 
 $Asia$不假思索：$BCJ$
 
+### $03.01$
+
+我，$fuge$和$Asia$在外面吃饭
+
+$Asia$突然把他的腿放在了垃圾桶上，声称这样子非常舒服
+
+$Asia$：但是这样好像很脏
+
+于是他把目光看向了上楼台阶
+
+然后三个人一齐把腿放在了台阶上……
+
+#### $2\ 1\ 1$
+
+我：诶$Asia$你为什么放在了第二个上面
+
+$Asia$：因为这样舒服
+
+#### $2\ 3\ 2$
+
+我：nmdwsm
+
+#### $2\ 3\ 4$
+
+$Asia$&$fuge$：艹
+
+#### $5\ 5\ 5$
+
+路人视角![](/img/qwq/old.png)
+
 [$Cansult$的日记 比我的有意思多了](https://cansult.ga/3632.html)
 
