--- a/_posts/2018-06-15-莫比乌斯反演略解.md
+++ b/_posts/2018-06-15-莫比乌斯反演略解.md
@@ -11,11 +11,11 @@ tags:
 ---
 >最近在肝莫比乌斯反演...推式子好难啊QAQ
 
-## 莫比乌斯函数
+### 莫比乌斯函数
 
 最基础的莫比乌斯函数$\mu$：
 
-### 性质
+- #### 性质
 
 这个函数满足以下性质：<a href="http://www.codecogs.com/eqnedit.php?latex=\mu&space;(d)=\left\{\begin{matrix}d=1,\mu&space;(d)=1\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;&space;\\d=\prod_{i=1}^{n}qi^{1},\mu&space;(d)=(-1)^{n}\;\;\;\;\;\\d=\prod_{i=1}^{n}qi^{k},\exists&space;k>1,\mu&space;(d)=0&space;\end{matrix}\right." target="_blank"><img src="http://latex.codecogs.com/gif.latex?\mu&space;(d)=\left\{\begin{matrix}d=1,\mu&space;(d)=1\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;&space;\\d=\prod_{i=1}^{n}qi^{1},\mu&space;(d)=(-1)^{n}\;\;\;\;\;\\d=\prod_{i=1}^{n}qi^{k},\exists&space;k>1,\mu&space;(d)=0&space;\end{matrix}\right." title="\mu (d)=\left\{\begin{matrix}d=1,\mu (d)=1\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\;\; \\d=\prod_{i=1}^{n}qi^{1},\mu (d)=(-1)^{n}\;\;\;\;\;\\d=\prod_{i=1}^{n}qi^{k},\exists k>1,\mu (d)=0 \end{matrix}\right." /></a>
 
@@ -25,7 +25,7 @@ $\mu$满足一些性质：
 
 2. $\sum_{d\vert n}\frac{\mu(d)}{d}=\frac{\varphi(n)}{n}$
 
-### 筛函数
+- #### 筛函数
 
 可以欧拉筛$O(n)$求出$\mu$
 
@@ -43,7 +43,7 @@ for(int i=2;i<=n;++i)
 	  }
   }
 ```
-## 莫比乌斯反演
+### 莫比乌斯反演
 
 然后就是莫比乌斯~~繁衍~~反演啦
 
@@ -51,7 +51,7 @@ for(int i=2;i<=n;++i)
 
 则有：$f(n)=\sum_{d\vert n}\mu(d)F(\frac{n}{d})$
 
-### 证明
+- #### 证明
 
 $\sum_{d\vert n}\mu(d)F(\frac{n}{d})=\sum_{d\vert n}\mu(d)\sum_{x\vert \frac{n}{d}}f(x)$
 
@@ -67,7 +67,7 @@ $=f(n)$（最后根据的是μ函数的性质）
 
 这就是莫比乌斯反演的基本内容了
 
-### 常见处理
+- #### 常见处理
 
 加一些常见的处理（前方大堆公式高能预警）：
 
