--- a/_posts/2018-03-14-有上下界的网络流略解.md
+++ b/_posts/2018-03-14-有上下界的网络流略解.md
@@ -20,13 +20,13 @@ tags:
 
 ### 无源汇可行流
 
-#### 一个~~烂大街~~的错误
+- #### 一个~~烂大街~~的错误
 
 我会做这个！把每条边的容量设成$r-l​$，然后求最大流，答案加上最大的$l​$就完事了~~快夸我快夸我~~
 
 其实仔细想想就有问题，这样做不一定满足流量平衡
 
-#### 正确做法
+- #### 正确做法
 
 现在问题是如何满足容量平衡
 
