--- a/_posts/2019-03-02-多项式全家桶.md
+++ b/_posts/2019-03-02-多项式全家桶.md
@@ -103,7 +103,7 @@ int read()
 	for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
 	return x;
 }
-int pow(int x,int b)
+int Pow(int x,int b)
 {
 	int ans=1;
 	for(;b;b>>=1,x=1ll*x*x%mod)
@@ -116,7 +116,7 @@ void NTT(int *A,int tt=1)
 	  if(i<R[i]) swap(A[i],A[R[i]]);
 	for(int i=1,w1;i<lim;i<<=1)
 	  {
-	  	w1=pow(3,(mod-1)/(i<<1));
+	  	w1=Pow(3,(mod-1)/(i<<1));
 	  	for(int l=i<<1,w,j=0;j<lim;j+=l)
 	  	  {
 	  	  	w=1;
@@ -131,7 +131,7 @@ void NTT(int *A,int tt=1)
 	if(tt==-1)
 	{
 		reverse(A+1,A+lim);
-		for(int i=0,G=pow(lim,mod-2);i<lim;++i)
+		for(int i=0,G=Pow(lim,mod-2);i<lim;++i)
 		  A[i]=1ll*A[i]*G%mod;
 	}
 }
@@ -246,11 +246,10 @@ int read()
 	for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
 	return x;
 }
-void inv(int *A,int n)
+void Inv(int *A,int n)
 {
 	if(n==1) return void(b[0]=Pow(A[0],mod-2));
-	inv(A,n+1>>1);
-	lim=1,L=0;
+	Inv(A,n+1>>1),lim=1,L=0;
 	while(lim<=2*n-1) lim<<=1,++L;
 	for(int i=0;i<=lim;++i)
 	  a[i]=0,R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
@@ -258,7 +257,7 @@ void inv(int *A,int n)
 	  a[i]=A[i];
 	NTT(a),NTT(b);
 	for(int i=0;i<=lim;++i)
-	  b[i]=(2-1ll*a[i]*b[i]%mod+mod)%mod*b[i]%mod;
+	  b[i]=1ll*(2-1ll*a[i]*b[i]%mod+mod)%mod*b[i]%mod;
 	NTT(b,-1);
 	for(int i=n;i<=lim;++i)
 	  b[i]=0;
@@ -268,7 +267,7 @@ int main()
 	n=read();
 	for(int i=0;i<n;++i)
 	  A[i]=read();
-	inv(A,n);
+	Inv(A,n);
 	for(int i=0;i<n;++i)
 	  printf("%d ",b[i]);
 	return 0;
@@ -295,13 +294,109 @@ $g'^4(x)+f^2(x)-2f(x)g'^2(x)\equiv 0(\mod x^n)​$
 
 移项化简得
 
-$\frac{g'^4(x)+f^2(x)}{2g^2(x)}\equiv f(x)(\mod x^n)$
+$(\frac{g'^2(x)+f(x)}{2g'(x)})^2\equiv f(x)(\mod x^n)$
 
-左边就是要求的$g(x)$了
+左边的那一坨就是要求的$g(x)​$了
 
 - ##### 代码
 
-咕咕咕
+```c++
+# include<iostream>
+# include<cstring>
+# include<cstdio>
+# include<algorithm>
+using namespace std;
+const int MAX=4e5+5,mod=998244353,inv2=499122177;
+int n,lim=1,L;
+int A[MAX],a[MAX],b[MAX],c[MAX],R[MAX];
+int read()
+{
+	int x(0);
+	char ch=getchar();
+	for(;!isdigit(ch);ch=getchar());
+	for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
+	return x;
+}
+int Pow(int a,int b)
+{
+	int ans=1;
+	for(;b;b>>=1,a=1ll*a*a%mod)
+	  if(b&1) ans=1ll*ans*a%mod;
+	return ans;
+}
+void NTT(int *A,int tt=1)
+{
+	for(int i=0;i<lim;++i)
+	  if(i<R[i]) swap(A[i],A[R[i]]);
+	for(int i=1,w1;i<lim;i<<=1)
+	  {
+	  	w1=Pow(3,(mod-1)/(i<<1));
+	  	for(int l=i<<1,j=0,w;j<lim;j+=l)
+	  	  {
+	  	  	w=1;
+	  	  	for(int k=0,x,y;k<i;++k,w=1ll*w*w1%mod)
+	  	  	  {
+	  	  	  	x=A[j+k],y=1ll*w*A[i+j+k]%mod,A[j+k]=x+y,A[i+j+k]=x-y+mod;
+	  	  	  	if(A[j+k]>=mod) A[j+k]-=mod;
+	  	  	  	if(A[i+j+k]>=mod) A[i+j+k]-=mod;
+			  }
+		  }
+	  }
+	if(tt==-1)
+	{
+		reverse(A+1,A+lim);
+		for(int i=0,G=Pow(lim,mod-2);i<lim;++i)
+		  A[i]=1ll*A[i]*G%mod;
+	}
+}
+void Inv(int *A,int *b,int n)
+{
+	if(n==1) return void(b[0]=Pow(A[0],mod-2));
+	Inv(A,b,n+1>>1),lim=1,L=0;
+	while(lim<=2*n-1) lim<<=1,++L;
+	for(int i=0;i<=lim;++i)
+	  a[i]=0,R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
+	for(int i=0;i<n;++i)
+	  a[i]=A[i];
+	NTT(a),NTT(b);
+	for(int i=0;i<=lim;++i)
+	  b[i]=1ll*(2-1ll*a[i]*b[i]%mod+mod)%mod*b[i]%mod;
+	NTT(b,-1);
+	for(int i=n;i<=lim;++i)
+	  b[i]=0;
+}
+void Sqrt(int *A,int n)
+{
+	if(n==1) return void(b[0]=1);
+	Sqrt(A,n+1>>1);
+	for(int i=0;i<=(n<<1);++i)
+	  c[i]=0;
+	Inv(b,c,n),lim=1,L=0;
+	while(lim<=2*n-1) lim<<=1,++L;
+	for(int i=0;i<=lim;++i)
+	  a[i]=0,R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
+	for(int i=0;i<n;++i)
+	  a[i]=A[i];
+	NTT(a),NTT(c);
+	for(int i=0;i<=lim;++i)
+	  a[i]=1ll*c[i]*a[i]%mod*inv2%mod;
+	NTT(a,-1);
+	for(int i=0;i<n;++i)
+	  b[i]=(1ll*b[i]*inv2%mod+a[i])%mod;
+}
+int main()
+{
+	n=read();
+	for(int i=0;i<n;++i)
+	  A[i]=read();
+	Sqrt(A,n);
+	for(int i=0;i<n;++i)
+	  printf("%d ",b[i]);
+	return 0;
+}
+```
+
+
 
 - #### 多项式除法
 
@@ -336,4 +431,3 @@ $x^{n-k+1}F'(x)​$的最低次项肯定要不小于$n-k+1​$，而要求的$G(
 - ##### 代码
 
 咕咕咕
-
