--- a/_posts/2019-03-02-多项式全家桶.md
+++ b/_posts/2019-03-02-多项式全家桶.md
@@ -52,10 +52,10 @@ void FFT(Complex *A,int tt=1)
 	  if(i<R[i]) swap(A[i],A[R[i]]);
 	for(int i=1;i<lim;i<<=1)
 	  {
-	  	Complex w1(cos(Pi/i),tt*sin(Pi/i));
+	  	Complex w1=Complex(cos(Pi/i),tt*sin(Pi/i));
 	  	for(int l=i<<1,j=0;j<lim;j+=l)
 	  	  {
-	  	  	Complex w(1,0),x,y;
+	  	  	Complex w=Complex(1,0),x,y;
 	  	  	for(int k=0;k<i;++k,w=w*w1)
 	  	  	  x=A[j+k],y=w*A[i+j+k],A[j+k]=x+y,A[i+j+k]=x-y;
 		  }
@@ -404,13 +404,13 @@ int main()
 
 如果有$f(x)=g(x)G(x)+F(x)​$，则$G(x)​$为商，$F(x)​$为余数
 
-设$a'(x)$表示$x^na(\frac{1}{x})$，把$\frac{1}{x}$代入原式，两边再同乘$x^n$
+设$a'(x)​$表示$x^na(\frac{1}{x})​$，把$\frac{1}{x}​$代入原式，两边再同乘$x^n​$
 
 $x^nf(\frac{1}{x})=x^ng(\frac{1}{x})G(\frac{1}{x})+x^nF(\frac{1}{x})​$
 
-发现可以用$a'(x)$代替一些多项式
+发现可以用$a'(x)​$代替一些多项式
 
-$f'(x)=g'(x)G'(x)+x^{n-k+1}F'(x)​$
+$f'(x)=g'(x)G'(x)+x^{n-k+1}F'(x)$（$k$是$g(x)$的最高次）
 
 $x^{n-k+1}F'(x)​$的最低次项肯定要不小于$n-k+1​$，而要求的$G(x)​$的最高次项肯定要小于$n-k+1​$的
 
@@ -420,14 +420,210 @@ $x^{n-k+1}F'(x)​$的最低次项肯定要不小于$n-k+1​$，而要求的$G(
 
 - ##### 代码
 
-咕咕咕
+```c++
+# include<iostream>
+# include<cstring>
+# include<cstdio>
+# include<algorithm>
+using namespace std;
+const int MAX=4e5+5,mod=998244353;
+int n,m,lim=1,L;
+int R[MAX],a[MAX],b[MAX],A[MAX],B[MAX];
+int read()
+{
+	int x(0);
+	char ch=getchar();
+	for(;!isdigit(ch);ch=getchar());
+	for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
+	return x;
+}
+int Pow(int a,int b)
+{
+	int ans=1;
+	for(;b;b>>=1,a=1ll*a*a%mod)
+	  if(b&1) ans=1ll*ans*a%mod;
+	return ans;
+}
+void NTT(int *A,int tt=1)
+{
+	for(int i=0;i<lim;++i)
+	  if(i<R[i]) swap(A[i],A[R[i]]);
+	for(int i=1,w1;i<lim;i<<=1)
+	  {
+	  	w1=Pow(3,(mod-1)/(i<<1));
+	  	for(int l=i<<1,w,j=0;j<lim;j+=l)
+	  	  {
+	  	  	w=1;
+	  	  	for(int k=0,x,y;k<i;++k,w=1ll*w*w1%mod)
+	  	  	  {
+	  	  	  	x=A[j+k],y=1ll*w*A[i+j+k]%mod,A[j+k]=x+y,A[i+j+k]=x-y+mod;
+	  	  	  	if(A[j+k]>=mod) A[j+k]-=mod;
+	  	  	  	if(A[i+j+k]>=mod) A[i+j+k]-=mod;
+			  }
+		  }
+	  }
+	  if(tt==-1)
+	  {
+	  	reverse(A+1,A+lim);
+	  	for(int i=0,G=Pow(lim,mod-2);i<lim;++i)
+	  	  A[i]=1ll*G*A[i]%mod;
+	  }
+}
+void Inv(int *A,int *b,int n)
+{
+	if(n==1) return void(b[0]=Pow(A[0],mod-2));
+	Inv(A,b,n+1>>1),lim=1,L=0;
+	while(lim<=2*n) lim<<=1,++L;
+	for(int i=0;i<=lim;++i)
+	  a[i]=0,R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
+	for(int i=0;i<n;++i)
+	  a[i]=A[i];
+	NTT(a),NTT(b);
+	for(int i=0;i<=lim;++i)
+	  b[i]=1ll*(2-1ll*b[i]*a[i]%mod+mod)%mod*b[i]%mod;
+	NTT(b,-1);
+	for(int i=n;i<=lim;++i)
+	  b[i]=0;
+}
+void Div(int *A,int *B)
+{
+	Inv(B,b,n-m+1),lim=1,L=0;
+	while(lim<=2*(n-m+1)) lim<<=1,++L;
+	for(int i=0;i<=lim;++i)
+	  a[i]=0,R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
+	for(int i=0;i<=n-m+1;++i)
+	  a[i]=A[i];
+	NTT(a),NTT(b);
+	for(int i=0;i<=lim;++i)
+	  a[i]=1ll*a[i]*b[i]%mod;
+	NTT(a,-1),reverse(a,a+n-m+1);
+}
+int main()
+{
+	n=read(),m=read();
+	for(int i=0;i<=n;++i)
+	  A[i]=read();
+	for(int i=0;i<=m;++i)
+	  B[i]=read();
+	reverse(A,A+1+n),reverse(B,B+1+m),Div(A,B);
+	for(int i=0;i<n-m+1;++i)
+	  printf("%d ",a[i]);
+	return 0;
+}
+```
+
+
 
 - #### 多项式取模
 
 多项式可以取模！
 
-求出上面的$G(x)​$然后求$F(x)=f(x)-g(x)G(x)​$即可
+求出上面的$G(x)$然后求$F(x)=f(x)-g(x)G(x)$即可
 
 - ##### 代码
 
-咕咕咕
+```c++
+# include<iostream>
+# include<cstring>
+# include<cstdio>
+# include<algorithm>
+using namespace std;
+const int MAX=4e5+5,mod=998244353;
+int n,m,lim=1,L;
+int R[MAX],a[MAX],b[MAX],A[MAX],B[MAX];
+int read()
+{
+	int x(0);
+	char ch=getchar();
+	for(;!isdigit(ch);ch=getchar());
+	for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
+	return x;
+}
+int Pow(int a,int b)
+{
+	int ans=1;
+	for(;b;b>>=1,a=1ll*a*a%mod)
+	  if(b&1) ans=1ll*ans*a%mod;
+	return ans;
+}
+void NTT(int *A,int tt=1)
+{
+	for(int i=0;i<lim;++i)
+	  if(i<R[i]) swap(A[i],A[R[i]]);
+	for(int i=1,w1;i<lim;i<<=1)
+	  {
+	  	w1=Pow(3,(mod-1)/(i<<1));
+	  	for(int l=i<<1,w,j=0;j<lim;j+=l)
+	  	  {
+	  	  	w=1;
+	  	  	for(int k=0,x,y;k<i;++k,w=1ll*w*w1%mod)
+	  	  	  {
+	  	  	  	x=A[j+k],y=1ll*w*A[i+j+k]%mod,A[j+k]=x+y,A[i+j+k]=x-y+mod;
+	  	  	  	if(A[j+k]>=mod) A[j+k]-=mod;
+	  	  	  	if(A[i+j+k]>=mod) A[i+j+k]-=mod;
+			  }
+		  }
+	  }
+	  if(tt==-1)
+	  {
+	  	reverse(A+1,A+lim);
+	  	for(int i=0,G=Pow(lim,mod-2);i<lim;++i)
+	  	  A[i]=1ll*G*A[i]%mod;
+	  }
+}
+void Inv(int *A,int *b,int n)
+{
+	if(n==1) return void(b[0]=Pow(A[0],mod-2));
+	Inv(A,b,n+1>>1),lim=1,L=0;
+	while(lim<=2*n) lim<<=1,++L;
+	for(int i=0;i<=lim;++i)
+	  a[i]=0,R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
+	for(int i=0;i<n;++i)
+	  a[i]=A[i];
+	NTT(a),NTT(b);
+	for(int i=0;i<=lim;++i)
+	  b[i]=1ll*(2-1ll*b[i]*a[i]%mod+mod)%mod*b[i]%mod;
+	NTT(b,-1);
+	for(int i=n;i<=lim;++i)
+	  b[i]=0;
+}
+void Div(int *A,int *B)
+{
+	Inv(B,b,n-m+1),lim=1,L=0;
+	while(lim<=2*(n-m+1)) lim<<=1,++L;
+	for(int i=0;i<=lim;++i)
+	  a[i]=0,R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
+	for(int i=0;i<=n-m+1;++i)
+	  a[i]=A[i];
+	NTT(a),NTT(b);
+	for(int i=0;i<=lim;++i)
+	  a[i]=1ll*a[i]*b[i]%mod;
+	NTT(a,-1),reverse(a,a+n-m+1);
+}
+int main()
+{
+	n=read(),m=read();
+	for(int i=0;i<=n;++i)
+	  A[i]=read();
+	for(int i=0;i<=m;++i)
+	  B[i]=read();
+	reverse(A,A+1+n),reverse(B,B+1+m),Div(A,B);
+	for(int i=0;i<n-m+1;++i)
+	  printf("%d ",a[i]);
+	printf("\n");
+	reverse(A,A+1+n),reverse(B,B+1+m);
+	while(lim<=n) lim<<=1,++L;
+	for(int i=n-m+1;i<=lim;++i)
+	  a[i]=0;
+	for(int i=0;i<=lim;++i)
+	  R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
+	NTT(B),NTT(a);
+	for(int i=0;i<=lim;++i)
+	  a[i]=1ll*a[i]*B[i]%mod;
+	NTT(a,-1);
+	for(int i=0;i<=m-1;++i)
+	  printf("%d ",(A[i]-a[i]+mod)%mod);
+	return 0;
+}
+```
+
