--- a/_posts/2019-03-03-[BZOJ3456]城市规划.md
+++ b/_posts/2019-03-03-[BZOJ3456]城市规划.md
@@ -51,8 +51,17 @@ tags:
 
 如果设$F(n)=2^{\frac{n(n-1)}{2}}$，$f(n)$表示$n$个点形成连通图的方案数，则有
 
-$F(n)=\sum_{i=1}^{n}f(i)F(n-i)C_{n-1}^{i-1}$
+$F(n)=\sum_{i=1}^{n}f(i)F(n-i)C_{n-1}^{i-1}​$
 
 可以这么理解这个式子：$1$号节点肯定要在一个连通块之内，所有考虑枚举$1$号节点所在连通块大小，这样$i$个节点时共有$C_{n-1}^{i-1}$种情况，同时乘上其他随意连的点的方案数
 
-可以把$C_{n-1}^{i-1}​$拆开，
+可以把$C_{n-1}^{i-1}$拆开，然后就是$\frac{F(n)}{(n-1)!}=\sum_{i=1}^{n}\frac{f(i)}{(i-1)!}\frac{F(n-i)}{(n-i)!}$
+
+看成$3$个多项式，然后就可以多项式求逆求出$f(x)$了
+
+### 代码
+
+```c++
+
+```
+
