--- a/_posts/2019-03-03-[BZOJ3456]城市规划.md
+++ b/_posts/2019-03-03-[BZOJ3456]城市规划.md
@@ -62,6 +62,87 @@ $F(n)=\sum_{i=1}^{n}f(i)F(n-i)C_{n-1}^{i-1}​$
 ### 代码
 
 ```c++
-
+# include<iostream>
+# include<cstring>
+# include<cstdio>
+# include<algorithm>
+# define LL long long
+using namespace std;
+const int MAX=5.3e5+5,mod=1004535809;
+int n,lim=1,L;
+int R[MAX],a[MAX],b[MAX],A[MAX],_A[MAX],fac[MAX],Fac[MAX];
+int read()
+{
+    int x(0);
+    char ch=getchar();
+    for(;!isdigit(ch);ch=getchar());
+    for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
+    return x;
+}
+int Pow(int a,LL b)
+{
+    int ans=1;
+    for(;b;b>>=1,a=1ll*a*a%mod)
+      if(b&1) ans=1ll*a*ans%mod;
+    return ans;
+}
+void NTT(int *A,int tt=1)
+{
+    for(int i=0;i<lim;++i)
+      if(i<R[i]) swap(A[i],A[R[i]]);
+    for(int i=1,w1;i<lim;i<<=1)
+      {
+        w1=Pow(3,(mod-1)/(i<<1));
+        for(int l=i<<1,w,j=0;j<lim;j+=l)
+          {
+            w=1;
+            for(int k=0,x,y;k<i;++k,w=1ll*w*w1%mod)
+              {
+                x=A[j+k],y=1ll*w*A[i+j+k]%mod,A[j+k]=x+y,A[i+j+k]=x-y+mod;
+                if(A[j+k]>=mod) A[j+k]-=mod;
+                if(A[i+j+k]>=mod) A[i+j+k]-=mod;
+              }
+          }
+      }
+    if(tt==-1)
+    {
+        reverse(A+1,A+lim);
+        for(int i=0,G=Pow(lim,mod-2);i<lim;++i)
+          A[i]=1ll*A[i]*G%mod;
+    }
+}
+void Inv(int *A,int *b,int n)
+{
+    if(n==1) return void(b[0]=Pow(A[0],mod-2));
+    Inv(A,b,n+1>>1),lim=1,L=0;
+    while(lim<=2*n-1) lim<<=1,++L;
+    for(int i=0;i<=lim;++i)
+      R[i]=(R[i>>1]>>1)|((i&1)<<L-1),a[i]=0;
+    for(int i=0;i<n;++i)
+      a[i]=A[i];
+    NTT(a),NTT(b);
+    for(int i=0;i<=lim;++i)
+      b[i]=(2-1ll*a[i]*b[i]%mod+mod)%mod*b[i]%mod;
+    NTT(b,-1);
+    for(int i=n;i<=lim;++i)
+      b[i]=0;
+}
+int main()
+{
+    n=read(),fac[0]=1,Fac[0]=Pow(1,mod-2);
+    for(int i=0;i<=n;++i)
+      {
+        if(i) fac[i]=1ll*fac[i-1]*i%mod,Fac[i]=Pow(fac[i],mod-2);
+        A[i]=1ll*Pow(2,1ll*i*(i-1)>>1)*Fac[i]%mod,_A[i]=1ll*A[i]*i%mod;
+      }
+    Inv(A,b,n);
+    while(lim<=2*n-1) lim<<=1,++L;
+    for(int i=0;i<=lim;++i)
+      R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
+    NTT(_A),NTT(b);
+    for(int i=0;i<=lim;++i)
+      _A[i]=1ll*_A[i]*b[i]%mod;
+    return NTT(_A,-1),printf("%d",1ll*_A[n]*fac[n-1]%mod),0;
+}
 ```
 
