--- a/_posts/2019-03-03-[BZOJ3456]城市规划.md
+++ b/_posts/2019-03-03-[BZOJ3456]城市规划.md
@@ -3,7 +3,7 @@ layout:		post
 title:		"[BZOJ3456]城市规划"
 date:		2019-03-03
 author:		"Dispwnl"
-header-img:	"img/used/"
+header-img:	"img/used/346347.png"
 catalog:	false
 tags:
     - 多项式运算
