--- a/_posts/2019-03-02-多项式全家桶.md
+++ b/_posts/2019-03-02-多项式全家桶.md
@@ -627,3 +627,167 @@ int main()
 }
 ```
 
+- #### 分治$FFT$（多项式分治）
+
+多项式可以分治求解！
+
+如果有$f(i)=\sum_{j=1}^{i}f(i-j)g(j)$，并且已经知道$g(x)$每一项的系数，现在要快速求解$f(x)$的每一项系数，其中$f(0)=1$
+
+考虑如果已知$f(l)\sim f(mid)$的值，就可以求出它们对于$f(mid+1)\sim f(r)$的贡献，对$x$的贡献即为$\sum_{i=l}^{mid}f(i)g(x-i)$
+
+这样就类似一个$CDQ$分治的过程，可以$O(n{logn}^2)$求解了
+
+- ##### 代码
+
+```c++
+// luogu-judger-enable-o2
+# include<iostream>
+# include<cstring>
+# include<cstdio>
+# include<algorithm>
+using namespace std;
+const int MAX=4e5+5,mod=998244353;
+int n,lim=1,L;
+int R[MAX],a[MAX],b[MAX],c[MAX],d[MAX],inv[MAX];
+int read()
+{
+	int x(0);
+	char ch=getchar();
+	for(;!isdigit(ch);ch=getchar());
+	for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
+	return x;
+}
+int Pow(int a,int b)
+{
+	int ans=1;
+	for(;b;b>>=1,a=1ll*a*a%mod)
+	  if(b&1) ans=1ll*a*ans%mod;
+	return ans;
+}
+void NTT(int *A,int tt=1)
+{
+	for(int i=0;i<lim;++i)
+	  if(i<R[i]) swap(A[i],A[R[i]]);
+	for(int i=1,w1;i<lim;i<<=1)
+	  {
+	  	w1=inv[i<<1];
+	  	for(int l=i<<1,j=0,w;j<lim;j+=l)
+	  	  {
+	  	  	w=1;
+	  	  	for(int k=0,x,y;k<i;++k,w=1ll*w*w1%mod)
+	  		  {
+	  			x=A[j+k],y=1ll*w*A[i+j+k]%mod,A[j+k]=x+y,A[i+j+k]=x-y+mod;
+	  			if(A[j+k]>=mod) A[j+k]-=mod;
+	  			if(A[i+j+k]>=mod) A[i+j+k]-=mod;
+			  }
+		  }
+	  }
+	if(tt==-1)
+	{
+		reverse(A+1,A+lim);
+		for(int i=0,G=Pow(lim,mod-2);i<lim;++i)
+		  A[i]=1ll*A[i]*G%mod;
+	}
+}
+void Solve(int l=0,int r=n-1)
+{
+	if(l>=r) return;
+	int mid(l+r>>1);
+	Solve(l,mid);
+	lim=1,L=0;
+	while(lim<=(r-l+1)) lim<<=1,++L;
+	for(int i=0;i<=lim;++i)
+	  c[i]=d[i]=0,R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
+	for(int i=l;i<=mid;++i)
+	  c[i-l]=b[i];
+	for(int i=0;i<=r-l;++i)
+	  d[i]=a[i+1];
+	NTT(c),NTT(d);
+	for(int i=0;i<=lim;++i)
+	  c[i]=1ll*c[i]*d[i]%mod;
+	NTT(c,-1);
+	for(int i=mid+1,j=mid-l;i<=r;++i,++j)
+	  {
+	  	b[i]+=c[j];
+	  	if(b[i]>=mod) b[i]-=mod;
+	  }
+	Solve(mid+1,r); 
+}
+int main()
+{
+	n=read();
+	for(int i=1;i<n;++i)
+	  a[i]=read();
+	for(int i=1,N=n<<2;i<=N;i<<=1)
+	  inv[i]=Pow(3,(mod-1)/i);
+	b[0]=1,Solve();
+	for(int i=0;i<n;++i)
+	  printf("%d ",b[i]);
+	return 0;
+}
+```
+
+### 生成函数
+
+- #### 普通型生成函数
+
+对于一个数列，它的普通型生成函数就是$\sum_{i=0}^{∞}a_ix^i$
+
+考虑这么一个问题：
+
+> $A​$物品只能拿奇数个，$B​$物品只能拿偶数个，求拿$n​$个物品的方案数
+
+$A$的生成函数为$x+x^3+x^5+…$，根据无穷项等比数列求和公式可得这个玩意是$\frac{x}{1-x^2}$
+
+$B$的生成函数为$1+x^2+x^4+…$，这个玩意是$\frac{1}{1-x^2}​$
+
+则答案就是它们相乘后$x^n$的系数
+
+普通型生成函数用来解决组合问题（物品不要求顺序）
+
+- #### 指数型生成函数
+
+对于一个数列，它的指数型生成函数就是$\sum_{i=0}^{∞}\frac{a_i}{i!}x^i$
+
+考虑这么一个问题：
+
+> $A$物品只能拿奇数个，$B$物品只能拿偶数个，拿的顺序不同算不同方案，求拿$n$个物品的方案数
+
+$A$的生成函数为$x+\frac{1}{3!}x^3+\frac{1}{5!}x^5+…$，这个玩意是$\frac{e^x-e^{-x}}{2}$
+
+$B$的生成函数为$1+\frac{1}{2!}x^2+\frac{1}{4!}x^4+…$，这个玩意是$\frac{e^x+e^{-x}}{2}$
+
+则答案就是它们相乘之后$x^n$的系数乘上$n!$的值
+
+指数型生成函数用来解决排列问题（物品要求顺序）
+
+- #### 列一些常用的公式
+
+$1+x+\frac{x^2}{2!}+\frac{x^3}{3!}+…=e^x​$
+
+$1-x+\frac{x^2}{2!}-\frac{x^3}{3!}+…=e^{-x}​$
+
+$1+\frac{x^2}{2!}+\frac{x^4}{4!}+\frac{x^6}{6}…=\frac{e^x+e^{-x}}{2}​$
+
+$x+\frac{x^3}{3!}+\frac{x^5}{5!}+\frac{x^7}{7}…=\frac{e^x-e^{-x}}{2}$
+
+$x-\frac{x^2}{2}+\frac{x^3}{3}+…=\ln(1+x)​$
+
+$x-\frac{x^3}{3}+\frac{x^5}{5}+…=\sin x​$
+
+$1-\frac{x^2}{2}+\frac{x^4}{4}+…=\cos x$
+
+$1+x+x^2+x^3+…=\frac{1}{1-x}$
+
+$1+ax+\frac{a(a-1)x^2}{2!}+\frac{a(a-1)(a-2)x^3}{3!}+…=(1+x)^a$
+
+### 拉格朗日插值
+
+- 公式
+
+记住得了
+
+有$F(x)$，表示一个$N$次多项式，现在已经知道了它在给定的$n$个点下的值
+
+则有$F(x)=\sum_{i=0}^{n}F(x_i)\prod_{j=0,j\not= i}^{n}\frac{x-x_j}{x_i-x_j}$，这样就可以$O(n^2)$求解了
+
