--- a/题目背景.md
+++ b/题目背景.md
@@ -4,7 +4,7 @@
 
 老$W$作为当地赫赫有名的工匠，当然不能随意收小$D$做徒弟。它转身回屋，出来时手里拿着一个奇怪但是异常精美的仪器
 
-![](E:\olda-failure\img\qwq\machine.png)
+![](E:\新建文件夹 (4)\olda-failure\img\qwq\machine.png)
 
 小$D$不由得惊呼一声：它从没见过如此精致的仪器！不，已经不能称牠为仪器了，这简直就是一件美轮美奂的艺术品！每一个角度都那么的浑然天成，每一个器件都是那么的恰到好处，却让人琢磨不透牠的用途。深吸一口气，小$D$不禁低声吟道：
 
@@ -22,9 +22,93 @@
 
 这台仪器可以生成$n$个$n$维向量，每一个向量都是满足第$x$个坐标为$1\sim k$中的某个数，而其他坐标为$0$，可以发现这些向量两两垂直（即点积为$0$）
 
-现在有向量$α$和向量$β$，如果向量$α+β$与向量$α$的夹角与向量$α+β$与向量$β$的夹角相等，老$W$就称这两个向量“可盘”；这样肯定会形成一些向量集，不是同一个向量集的向量两两不可盘
+现在有向量$α$和向量$β$，现有生成函数$F(x)=1-\frac{x^2}{2}+\frac{x^4}{4}+o(x^4)$，如果向量$α+β$与向量$α$的夹角$x$与向量$α+β$与向量$β$的夹角$x'$满足$F(x)=F(x')$（注意这里是弧度制），老$W$就称这两个向量“可盘”（啊啊啊别打我了前面那个生成函数就是$\cos x$）；这样肯定会形成一些向量集，不是同一个向量集的向量两两不可盘
 
-对于某一个可盘的向量集，如果牠的大小恰好为$V$，称这个向量集为“超级可盘的向量集”。“超级可盘的向量集”是检验这个$n$个$n$维向量好坏的重要标准，所以如果“超级可盘的向量集”个数为$T$，老$W$会给这次生成$P_T$分
+对于某一个可盘的向量集，如果牠的大小恰好为$V$，称这个向量集为“像昊哥的头一样超级可盘的向量集”，简称“头盘集”。“头盘集”是检验这个$n$个$n$维向量好坏的重要标准，所以如果“头盘集”个数为$T$，老$W$会给这次生成$P_T$分
 
-本来这个复杂的仪器能根据输入的$n$个值生成$n$个向量，并且自动算出最后分值，但是越精密的仪器越容易损坏，前些日子老$W$盘牠的时候把这个玩意盘坏了，导致$$
+本来这个复杂的仪器能根据输入的$n$个值生成$n$个向量，并且自动算出最后分值，但是越精密的仪器越容易损坏，前些日子老$W$盘牠的时候把这个玩意盘坏了，导致$n$个向量的长度是随机生成的（但依然是$1\sim k$之间的整数）
+
+老$W$要求小$D$求出对于每种情况的生成所打的分数之和，考虑到小$D$的脑子可能存不下太多的位数，它允许答案对$998244353$取模，两种生成不同当且仅当它们存在某第$i$个向量不相等（可以看样例解释）
+
+### 输入格式
+
+第一行$3$个整数$n,k,V$，表示生成向量的维数，坐标范围，“超级可盘的向量集”大小
+
+第二行$k+1$个整数，显然“头盘集”个数不会多于$k$，第$i$个整数表示$P_{i-1}$
+
+### 输出格式
+
+一行，表示分数之和，答案记得取模
+
+### 样例相关
+
+#### 输入样例1
+
+```plain
+3 2 2
+666 233 101
+```
+
+#### 输出样例1
+
+```plain
+2730
+```
+
+#### 输入样例2
+
+```plain
+25 15 6
+123 1242 34534 5656 2333 4545 7868 333 454 777 908 663 788 345 355 331
+```
+
+#### 输出样例2
+
+```plain
+744832841
+```
+
+#### 样例解释1
+
+每种情况枚举一下就好了：
+
+$(1,0,0)(0,1,0)(0,0,1)$，“头盘集”只有$0$个，贡献为$666$
+
+$(1,0,0)(0,1,0)(0,0,2)$，“头盘集”只有$1$个，贡献为$233$
+
+$(1,0,0)(0,2,0)(0,0,1)$，“头盘集”只有$1$个，贡献为$233$
+
+$(1,0,0)(0,2,0)(0,0,2)$，“头盘集”只有$1$个，贡献为$233$
+
+$(2,0,0)(0,1,0)(0,0,1)$，“头盘集”只有$1$个，贡献为$233$
+
+$(2,0,0)(0,1,0)(0,0,2)$，“头盘集”只有$1$个，贡献为$233$
+
+$(2,0,0)(0,2,0)(0,0,1)$，“头盘集”只有$1$个，贡献为$233$
+
+$(2,0,0)(0,2,0)(0,0,2)$，“头盘集”只有$0$个，贡献为$666$
+
+#### 样例解释2
+
+你是想累死我吗
+
+### 数据范围与提示
+
+对于$1\%$的数据，$n\le 1,k\le 1$，如果你连这个分都懒得打我给您劈叉了
+
+对于$10\%​$的数据，$n\le 100,k\le 1000,V\le 50​$
+
+对于$50\%$的数据，$k\le 5000$
+
+对于另$20\%​$的数据，对于$1\le i\le k​$，$P_i=0​$，放心这里的数据有梯度（并不）
+
+对于$100\%$的数据，$n\le 10^7,k\le 10^5,V\le 150$
+
+### 题外话
+
+如果有做过原题（您能从我魔改成这样的题面中定位出原题真的是太神仙了）/没做过但是觉得这是$SB$题几分钟切掉了的同学，并且您把前面的题都<code>AK</code>了，请大喊三声~~谁敢杀我~~“我怎么又双叒叕阿克了啊”！，然后轻轻走出机房，注意不要影响到其他同学<code>AK</code>。哦，前面几个字分别念又yòu双shuāng叒ruò叕zhuó
+
+然后您可以来隔壁机房找出题人~~获取百年老橘皮汁一份~~并向它索要以撒/$UT$/魔塔玩~~甚至还可以推gal~~
+
+
 
