--- a/题目背景.md
+++ b/题目背景.md
@@ -96,9 +96,9 @@ $(2,0,0)(0,2,0)(0,0,2)$，“头盘集”只有$0$个，贡献为$666$
 
 对于$1\%$的数据，$n\le 1,k\le 1$，如果你连这个分都懒得打我给您劈叉了
 
-对于$10\%​$的数据，$n\le 100,k\le 1000,V\le 50​$
+对于$20\%$的数据，$n\le 100,k\le 1000,V\le 50$
 
-对于$50\%$的数据，$k\le 5000$
+对于$50\%​$的数据，$k\le 5000​$
 
 对于另$20\%​$的数据，对于$1\le i\le k​$，$P_i=0​$，放心这里的数据有梯度（并不）
 
@@ -106,9 +106,14 @@ $(2,0,0)(0,2,0)(0,0,2)$，“头盘集”只有$0$个，贡献为$666$
 
 ### 题外话
 
-如果有做过原题（您能从我魔改成这样的题面中定位出原题真的是太神仙了）/没做过但是觉得这是$SB$题几分钟切掉了的同学，并且您把前面的题都<code>AK</code>了，请大喊三声~~谁敢杀我~~“我怎么又双叒叕阿克了啊”！，然后轻轻走出机房，注意不要影响到其他同学<code>AK</code>。哦，前面几个字分别念又yòu双shuāng叒ruò叕zhuó
+- #### 出题人送奖励环节OUO！
 
-然后您可以来隔壁机房找出题人~~获取百年老橘皮汁一份~~并向它索要以撒/$UT$/魔塔玩~~甚至还可以推gal~~
+如果有做过原题（您能从我魔改成这样的题面中定位出原题真的是太神仙了）/没做过但是觉得这是$SB​$题几分钟切掉了的同学，并且您把前面的题都<code>AK</code>了，请大喊三声~~谁敢杀我~~“我怎么又双叒叕阿克了啊”！，然后轻轻走出机房，注意不要影响到其他同学<code>AK</code>。哦，前面几个字分别念又yòu双shuāng叒ruò叕zhuó
 
+然后您可以来隔壁机房找出题人~~获取百年老橘皮汁一份~~并向它索要以撒/$UT​$/魔塔玩~~甚至还可以推gal~~
 
+- #### 出题人送温暖环节OAO！
 
+如果您不了解[向量](http://172.22.21.20/blogof/dispwnl/blog/71)的话戳这里
+
+如果您不了解[三角函数](http://172.22.21.20/blogof/dispwnl/blog/73)的话戳这里
