--- a/_posts/2018-03-18-[SDOI2017]树点涂色.md
+++ b/_posts/2018-03-18-[SDOI2017]树点涂色.md
@@ -1,4 +1,5 @@
-﻿---
+---
+
 layout:     post
 title:      "[SDOI2017]树点涂色"
 date:       2018-03-19
@@ -92,9 +93,9 @@ Bob一共会进行m次操作
 
 总的来说就是$LCT$+树链剖分+树上差分
 
-先不管操作1
+先不管操作$1$
 
-对于操作2，考虑树上差分，设$s[i]$为$i$点到根的权值和，则答案就是$s[x]+s[y]-s[lca(x,y)]*2+1$（多减了1个$lca$所以+1）
+对于操作2，考虑树上差分，设$s[i]$为$i$点到根的权值和，则答案就是$s_x+s_y-2s_{lca(x,y)}+1$（多减了$1$个$lca$所以+1）
 
 那么每个点的初始值就是ta的深度（因为开始每个点颜色都不一样）
 
@@ -104,15 +105,15 @@ Bob一共会进行m次操作
 
 操作3求子树最大值也是树链剖分的基本操作
 
-主要问题是操作1
+主要问题是操作$1​$
 
 操作1就很妙了，利用了一个性质：（以下注意链和边的区分）
 
 <strong>$LCT$中实链数量（即$splay$的数量）=虚边数量+1</strong>
 
-我们把同一颜色的点放在1个$splay$里
+我们把同一颜色的点放在$1​$个$splay​$里
 
-由操作可得，$LCT$中点$i$到根节点有多少实链$s[i]$就是多少
+由操作可得，$LCT$中点$i$到根节点有多少实链$s_i$就是多少
 
 所以$access$将几个$splay$连成1个$splay$，正好对应着用同一种颜色覆盖路径
 
