--- a/_posts/2018-03-18-[ZJOI2012]网络.md
+++ b/_posts/2018-03-18-[ZJOI2012]网络.md
@@ -1,4 +1,5 @@
-﻿---
+---
+
 layout:     post
 title:      "[ZJOI2012]网络"
 date:       2018-03-18
@@ -133,11 +134,11 @@ Error 1.
 
 如果此颜色=修改颜色$dis$，就不用修改直接输出"Success."
 
-对于判断是否满足条件1，我们用一个数组$d$记录$x$连出去颜色$i$的边有几条，即$d[x][i]$
+对于判断是否满足条件1，我们用一个数组$d$记录$x$连出去颜色$i$的边有几条，即$d_{x,i}$
 
-这样随时更新$d$，如果$d[x][dis]>1$或$d[y][dis]>1$，就不满足，输出"Error 1."
+这样随时更新$d​$，如果$d_{x,dis}>1​$或$d_{y,dis}>1​$，就不满足，输出"Error 1."
 
-对于判断是否满足条件2，我们直接判断颜色编号为$dis$的$LCT$中$x$和$y$是否连通
+对于判断是否满足条件2，我们直接判断颜色编号为$dis​$的$LCT​$中$x​$和$y​$是否连通
 
 如果连通，再加一条边肯定成同颜色环，就输出"Error 2."
 
