--- a/_posts/2018-03-20-[HNOI2008]玩具装箱.md
+++ b/_posts/2018-03-20-[HNOI2008]玩具装箱.md
@@ -57,7 +57,7 @@ $f_i$表示前$i$个玩具最小花费，$sum_i$是玩具大小的前缀和
 
 即有：$f_i=f_j+(sum_i-sum_j+i-j-1-L)^2$
 
-然后这样循环肯定TLE~~然而有40分我就满足了~~
+然后这样循环肯定<code>TLE</code>~~然而有40分我就满足了~~
 
 我们对上面那个式子进行操作：$f_i=f_j+((sum_i+i)-(sum_j+j)-(L+1))^2$
 
