--- a/_posts/2018-03-23-济南颓废记.md
+++ b/_posts/2018-03-23-济南颓废记.md
@@ -1,4 +1,5 @@
-﻿---
+---
+
 layout:     post
 title:      "济南颓废记"
 date:       2018-03-23~30
@@ -21,10 +22,10 @@ tags:
 
 然后继续颓...昊哥竟然写物理题~~然而过了一会就开始颓了果然没人能抵御颓废的诱惑~~
 
-坐等明天爆0~~真是流水账的一天~~
+坐等明天爆$0$~~真是流水账的一天~~
 
 ## Day1
->mdzz昨天立了个flag今天真爆0了...
+>mdzz昨天立了个flag今天真爆$0$了...
 
 以为7点半到就在6点40起的床，然后发现7点到
 
@@ -36,7 +37,7 @@ tags:
 
 于是打了2个多小时的暴力~~不亦乐乎~~
 
-行吧然后开始xjb想正解，想了1个多小时发现以我的水平不太可能
+行吧然后开始想正解，想了1个多小时发现以我的水平不太可能
 
 期望得分：20+30+20=70
 
