--- a/_posts/2018-04-03-[LUOGU3398]仓鼠找sugar.md
+++ b/_posts/2018-04-03-[LUOGU3398]仓鼠找sugar.md
@@ -1,4 +1,5 @@
-﻿---
+---
+
 layout:     post
 title:      "[LUOGU3398]仓鼠找sugar"
 date:       2018-04-03
@@ -63,11 +64,11 @@ Y
 
 做个标记，在查询基友走过的路径上是否有标记
 
-开始我用bool标记路径，每次询问就$memset$清空QAQ
+开始我用<code>bool</code>标记路径，每次询问就$memset$清空QAQ
 
 然后超时了~~竟然还有40分~~
 
-于是用int标记，每次询问++
+于是用<code>int</code>标记，每次询问加$1$
 
 维护区间最大值，最后看是否相等就行了
 
