--- a/_posts/2018-04-09-2018SD省选题解.md
+++ b/_posts/2018-04-09-2018SD省选题解.md
@@ -145,7 +145,7 @@ int main()
 
 值得注意的是，搞这个点的时候，区间得加上ta父节点的$size-1$（但只用加一次）
 
-但这样并没有什么卯月，还是60，因为重复的问题没有解决
+但这样并没有什么卯月，还是$60$，因为重复的问题没有解决
 
 可以用一个数组记录这个点向右有多少连续相同的跟这个点难度相同的数（注意是排序后）
 
