--- a/_posts/2018-04-17-[Violet 3]天使玩偶.md
+++ b/_posts/2018-04-17-[Violet 3]天使玩偶.md
@@ -1,4 +1,5 @@
-﻿---
+---
+
 layout:     post
 title:      "[Violet 3]天使玩偶"
 date:       2018-04-17
@@ -53,31 +54,29 @@ xi,yi<=1 000 000
 
 ### 题解
 
-可以把时间看成1个条件（初始点为0），坐标为2个条件
+可以把时间看成$1$个条件（初始点为$0$），坐标为$2$个条件
 
 这样就成了一个三维偏序问题，~~似乎~~可以用$CDQ分治$搞了
 
 然而曼哈顿距离带了个绝对值很烦人
 
-所以分4种情况讨论
+所以分$4$种情况讨论
 
 发现四种情况都可以看成是一个大矩阵套一个小矩阵
 
-情况1：![](/img/study/angel1.png)
+情况$1$：![](/img/study/angel1.png)
 
 这是最简单的情况，直接找到二分左边的最大值减就行了
 
-情况2：![](/img/study/angel2.png)
+情况$2$：![](/img/study/angel2.png)
 
 这种情况肯定不能直接减了![](/img/study/angel3.png)
 
-我们发现，用最大值减去$A,B$的$x$，可以得到两个新的矩阵$C,D$，而ta们满足条件1，而且答案不变
+我们发现，用最大值减去$A,B$的$x$，可以得到两个新的矩阵$C,D$，而ta们满足条件$1$，而且答案不变
 
 所以这么处理就行了
 
-情况3、4同样处理
-
-这题似乎卡线段树~~本来就不是用线段树好吧~~...必须用树状数组维护~~我™不会啊~~
+情况$3$、$4$同样处理
 
 ### 代码
 ```
