--- a/_posts/2018-04-24-[NOI2012]魔幻棋盘.md
+++ b/_posts/2018-04-24-[NOI2012]魔幻棋盘.md
@@ -1,4 +1,4 @@
-﻿---
+---
 layout:     post
 title:      "[NOI2012]魔幻棋盘"
 date:       2018-04-19
@@ -77,23 +77,23 @@ C 类数据占 40%，满足 N * M ≤ 500000，T ≤ 100000。
 
 这题一看就是二维线段树
 
-区间修改简单，但是区间$gcd$怎么维护是个问题
+区间修改简单，但是区间$\gcd​$怎么维护是个问题
 
-$gcd$有一个性质：一堆数的$gcd$=这堆数差分后的$gcd$
+$\gcd​$有一个性质：一堆数的$\gcd​$=这堆数差分后的$\gcd​$
 
-我们可以通过两个数推广到多个数。设$A=gcd*a$
+我们可以通过两个数推广到多个数。设$A=\gcd\times a​$
 
-$B=gcd*b$
+$B=\gcd\times b​$
 
-则差分后$B=B-A=bgcd-agcd=(b-a)*gcd$
+则差分后$B=B-A=b\gcd-a\gcd=(b-a)\gcd​$
 
-这两个数的最大公约数还是$gcd$
+这两个数的最大公约数还是$\gcd​$
 
-然后就可以把这个矩阵差分，然后问题转换为维护一个矩阵里区间$gcd$+单点修改（差分后修改一个区间变为单点修改）
+然后就可以把这个矩阵差分，然后问题转换为维护一个矩阵里区间$\gcd​$+单点修改（差分后修改一个区间变为单点修改）
 
 单点修改需要讨论一堆，这里不再赘述
 
-我写的是四分树~~难写死了~~，效率还不错
+我写的是四分树~~难写死了~~，~~虽然矩阵查询复杂度是假的~~效率还不错
 
 ### 代码
 ```
