--- a/_posts/2018-06-27-[SHOI2015]脑洞治疗仪.md
+++ b/_posts/2018-06-27-[SHOI2015]脑洞治疗仪.md
@@ -84,15 +84,15 @@ $2 l r$：SHTSC 询问$[l,r]$区间内最大的脑洞有多大。
 
 线段树裸题，维护最大连续子段
 
-操作只有区间覆盖（全变为0）和一个区间补全（姑且这么命名）
+操作只有区间覆盖（全变为$0$）和一个区间补全（姑且这么命名）
 
 区间覆盖好说，一个标记就行了
 
 区间补全怎么搞呢？
 
-可以在给定的区间里找出连续为0的一段，并且你现在有的脑组织可以填满ta
+可以在给定的区间里找出连续为$0$的一段，并且你现在有的脑组织可以填满ta
 
-这样就又是区间覆盖（全变为1）了
+这样就又是区间覆盖（全变为$1$）了
 
 要是脑组织不够，就继续二分直到找到可以填满的区间
 
@@ -102,13 +102,13 @@ $2 l r$：SHTSC 询问$[l,r]$区间内最大的脑洞有多大。
 
 ![](/img/study/naodong1.png)
 
-把红色部分填进脑洞1
+把红色部分填进脑洞$1$
 
 ![](/img/study/naodong2.png)
 
-这时红色剩余部分不够填充脑洞2了，于是二分脑洞2直到找到可以填充的部分
+这时红色剩余部分不够填充脑洞$2$了，于是二分脑洞$2$直到找到可以填充的部分
 
-这样加上一些优化时间复杂度大概是$O(nlogn)$多一点？~~我也不会算~~
+这样加上一些优化时间复杂度大概是$O(n\log n)$多一点？~~我也不会算~~
 
 反正开$O2$跑的挺快qwq
 
