--- a/_posts/2018-07-12-[IOI2011]Race.md
+++ b/_posts/2018-07-12-[IOI2011]Race.md
@@ -1,4 +1,5 @@
-﻿---
+---
+
 layout:     post
 title:      "[IOI2011]Race"
 date:       2018-07-12
@@ -54,13 +55,13 @@ $n\leq 200000,K\leq 1000000$。
 
 判断$-1$直接记录树中是否有小于等于$k$的路径
 
-然后得了80……
+然后得了$80$……
 
 冷静分析，发现判断不了两条边在同一子树里的情况
 
 于是把每棵子树染色，判断边的时候判断是否不在同一子树里
 
-然后……75？
+然后……$75$？
 
 奥忘清零了QAQ
 
@@ -68,7 +69,7 @@ $n\leq 200000,K\leq 1000000$。
 
 于是加了个枚举，枚举相同长度的边
 
-终于A了……复杂度应该比正常做法大一点~~枚举~~，开$O2$跑了$5s$多
+终于<code>AC</code>了……复杂度应该比正常做法大一点~~枚举~~，开$O2$跑了$5s$多
 ![](/img/qaq/346.jpg)
 
 ### 代码
