--- a/_posts/2018-07-15-点分治略解.md
+++ b/_posts/2018-07-15-点分治略解.md
@@ -23,7 +23,7 @@ tags:
 
 那找个根，求出每个点到根的距离，然后枚举两个点，求$lca$，简单加减一下就行了
 
-大概是$O(n^2logn)$的复杂度……？
+大概是$O(n^2\log n)$的复杂度……？
 
 还是布星啊我$n$还要大，几万的数据就搞不了了~~怎么这么多事~~
 
@@ -56,7 +56,7 @@ tags:
 
 ![](/img/study/dianfenzhi3.png)
 
-显然选$y$为根比选$x$为根不优，选$x$最多递归2层，选$y$最多递归4层
+显然选$y$为根比选$x$为根不优，选$x$最多递归$2$层，选$y$最多递归$4$层
 
 ~~显然~~可以发现找树的重心（重心所有的子树的大小都不超过整个树大小的一半）是最优的
 
@@ -87,7 +87,7 @@ void GET_ROOT(int x,int fa)//x为当前点，fa为父亲节点
 
 然后可以枚举子树里的两个点，如果两个点到重心的距离和为$k$（题目要找距离为$k$的点对），那么答案$+1$
 
-这是第二种情况，第一种情况就让距离根为$k$的点跟重心配对就行了，因为重心到重心的距离为$0$
+这是第二种情况，第一种情况就让距离根为$k​$的点跟重心配对就行了，因为重心到重心的距离为$0​$
 
 如何统计答案呢？
 
@@ -215,11 +215,11 @@ void dfs(int x)//分治函数也改一下
 
 - ### 复杂度
 
-每次处理找树的重心，保证递归层数不超过$logn$，dfs求距离复杂度是$O(n)$，这里处理答案是$logn$，所以这个题总复杂度是$O(nlog^2n)$的……？反正过几万的数据是绰绰有余的（逃
+每次处理找树的重心，保证递归层数不超过$\log n​$，dfs求距离复杂度是$O(n)​$，这里处理答案是$\log n​$，所以这个题总复杂度是$O(n\log^2n)​$的……？反正过几万的数据是绰绰有余的（逃
 
-补充：经$Aufun$大爷~~嘲讽~~教导后，因为有的题可以用桶排序，所以复杂度可以降到$O(logn)$
+补充：经$Aufun$大爷~~嘲讽~~教导后，因为有的题可以用桶排序，所以复杂度可以降到$O(\log n)$
 
-当然有的题桶开不下必须$sort$了QAQ~~我一直用sort竟然没被卡~~
+当然有的题桶开不下必须$sort​$了QAQ~~我一直用sort竟然没被卡~~
 
 #### 推荐题：
 
