--- a/_posts/2018-07-23-K-D Tree略解.md
+++ b/_posts/2018-07-23-K-D Tree略解.md
@@ -18,7 +18,7 @@ tags:
 
 这不是树套树裸题吗~~暴力数据结构大法好~~
 
-但是$N<=500000$，树套树最差情况下需要$4000G$（噗），空间爆炸
+但是$N\le 500000$，树套树最差情况下需要$4000G$（噗），空间爆炸
 
 emmmm可以用$CDQ$分治搞
 
