--- a/_posts/2018-08-20-[LUOGU3676]小清新数据结构题.md
+++ b/_posts/2018-08-20-[LUOGU3676]小清新数据结构题.md
@@ -85,7 +85,7 @@ tags:
 
 ~~神™小清新~~
 
-看数据，里面有30%的数据保证每次询问根都为1
+看数据，里面有$30\%$的数据保证每次询问根都为$1$
 
 如果一个点点权被修改了，可以看成这个点增加了一个值（比如$5\rightarrow 3$可以看成$5+(-2)=3$）
 
