--- a/_posts/2018-09-03-[NOIP2015]运输计划.md
+++ b/_posts/2018-09-03-[NOIP2015]运输计划.md
@@ -1,4 +1,5 @@
-﻿---
+---
+
 layout:     post
 title:      "[NOIP2015]运输计划"
 date:       2018-09-03
@@ -16,7 +17,7 @@ tags:
 公元 $2044$ 年,人类进入了宇宙纪元。
 
 ### 题目描述
-公元$2044$ 年，人类进入了宇宙纪元。
+公元$2044​$ 年，人类进入了宇宙纪元。
 
 L 国有 $n$ 个星球，还有 $n-1$ 条双向航道，每条航道建立在两个星球之间，这 $n-1$ 条航道连通了 $L$ 国的所有星球。
 
@@ -73,7 +74,7 @@ L 国有 $n$ 个星球，还有 $n-1$ 条双向航道，每条航道建立在两
 
 用倍增处理每个计划的$LCA$，枚举每个计划，看第$i$个计划是否长度大于二分答案
 
-如果大于，用差分的思想，$s_i,p_i$标记+1,$LCA$处标记-2
+如果大于，用差分的思想，$s_i,p_i$标记+1,$LCA$处标记$-2$
 
 再求个和就可以轻松判断某个边是否被所有满足条件的计划经过了qwq
 
