--- a/_posts/2018-09-03-[NOIP2016]换教室.md
+++ b/_posts/2018-09-03-[NOIP2016]换教室.md
@@ -80,7 +80,7 @@ tags:
 ### 题解
 明显期望$dp$...先$Floyd$求出各个教室直接的最短距离
 
-用$f[i][j][0/1]$表示第$i$个时间段、已经申请了$j$次、这一次是否申请
+用$f_{i,j,0/1}$表示第$i$个时间段、已经申请了$j$次、这一次是否申请
 
 状态转移方程很简单，但是非常长...
 
