--- a/_posts/2018-09-03-[NOIP2017]宝藏.md
+++ b/_posts/2018-09-03-[NOIP2017]宝藏.md
@@ -1,4 +1,5 @@
-﻿---
+---
+
 layout:     post
 title:      "[NOIP2017]宝藏"
 date:       2018-09-03
@@ -46,7 +47,7 @@ L代表这条道路的长度，K代表从赞助商帮你打通的宝藏屋到这
 1 4 1 
 2 3 4 
 3 4 1 
-``` 
+```
 #### 输出样例#1： 
 ```plain
 4
@@ -83,7 +84,7 @@ L代表这条道路的长度，K代表从赞助商帮你打通的宝藏屋到这
 ### 题解
 $n$这么小肯定是状态压缩了qwq
 
-枚举每个点，$f[i][j]$以$i$点为起点宝藏屋状态为$j$的最少花费
+枚举每个点，$f_{i,j}$以$i$点为起点宝藏屋状态为$j$的最少花费
 
 每次找一个已开发的宝藏屋和一个未开发的宝藏屋，按距离转移就行了
 
