--- a/_posts/2018-09-03-[NOIP2017]逛公园.md
+++ b/_posts/2018-09-03-[NOIP2017]逛公园.md
@@ -1,4 +1,5 @@
-﻿---
+---
+
 layout:     post
 title:      "[NOIP2017]逛公园"
 date:       2018-09-03
@@ -85,17 +86,17 @@ tags:
 ### 题解
 看到$k$很小就想到用$dp$了（大雾）
 
-设$f[u][j]$表示第$u$个点还有$j$个长度可以用来不走最短路
+设$f_{u,j}​$表示第$u​$个点还有$j​$个长度可以用来不走最短路
 
-现在要从$u->v$，设$u$的最短路为$d_u$，$v$的最短路为$d_v$，则走$u->v$这条边需要格外长度为$d_v-(d_u+length_{u->v})$
+现在要从$u\rightarrow v​$，设$u​$的最短路为$d_u​$，$v​$的最短路为$d_v​$，则走$u\rightarrow v​$这条边需要格外长度为$d_v-(d_u+length_{u\rightarrow v})​$
 
-如果这个长度小于等于$j$，则可以转移
+如果这个长度小于等于$j​$，则可以转移
 
 但是这样有个先后问题，因为这是个有向图
 
 所以可以按$d$和拓扑序排序，然后进行转移
 
-诶写个记忆化搜索就好了...靠近$N$的点先处理，最后答案就是$f[1][k]$
+诶写个记忆化搜索就好了...靠近$N$的点先处理，最后答案就是$f_{1,k}$
 
 只有存在$0$环才能输出$-1$的情况，所以搜索的时候判断当前情况是否存在在搜索栈中，在返回$-1$就行了
 
