--- a/_posts/2018-10-24-LOJ刷题记录.md
+++ b/_posts/2018-10-24-LOJ刷题记录.md
@@ -1074,7 +1074,7 @@ int main()
 ```
 ### [「一本通 5.3 练习 2」不要 62](https://loj.ac/problem/10167)
 #### 题解
-好像是卡边界问题WA了几发？
+好像是卡边界问题<code>WA</code>了几发？
 
 #### 代码
 ```
