--- a/_posts/2018-12-05-[HNOI2016]网络.md
+++ b/_posts/2018-12-05-[HNOI2016]网络.md
@@ -124,9 +124,9 @@ tags:
 
 树链剖分修改一条链需要跳重链，即把一条链分成几段$dfn$序连续的区间，所以可以记录这些区间并排序，修改之外的区间
 
-根据树剖的性质，区间数不超过$logn$个，所以复杂度$O(log^3n)$（……），但是考虑到大区间维护的堆肯定会影响子区间维护的值，所以线段树不用下传和上传，复杂度~~应该~~远远不到$O(log^3n)$
+根据树剖的性质，区间数不超过$\logn$个，所以复杂度$O(\log^3n)$（……），但是考虑到大区间维护的堆肯定会影响子区间维护的值，所以线段树不用下传和上传，复杂度~~应该~~远远不到$O(\log^3n)$
 
-操作$3$就是单点查询，操作$2$怎么维护呢？
+操作$3​$就是单点查询，操作$2​$怎么维护呢？
 
 考虑再维护一个堆$B$存这个节点应该去掉的值（……），如果$dis_{top_A}=dis_{top_B}$，说明这个值已经被去除了，两边都弹出，直到$dis_{top_A}\not =dis_{top_B}$或者$-1$的情况
 
