--- a/_posts/2019-01-09-[BZOJ3413]匹配.md
+++ b/_posts/2019-01-09-[BZOJ3413]匹配.md
@@ -50,7 +50,7 @@ Sample Input
 
 所以可以先找到$B$在$A$中最早匹配成功的位置，现在只需要查询某个节点子树里节点在$A$串中位置在某个区间中的权值和，也就是查询某个子串在$A$串中某个区间出现次数
 
-从叶子开始一路线段树合并即可，线段树要开$logn$倍的空间……
+从叶子开始一路线段树合并即可，线段树要开$\log n$倍的空间……
 
 ### 代码
 ```
