--- a/_posts/2019-01-17-[BZOJ3730]震波.md
+++ b/_posts/2019-01-17-[BZOJ3730]震波.md
@@ -74,7 +74,7 @@ tags:
 
 先构建出来点分树，对于点分树上的每一个节点开两棵线段树，以距离为下标存价值和，维护子树中的点每个距离的到自己的答案$ans$和到父亲的答案$ans'$
 
-修改一路暴跳$father​$就可以，查询统计$\sum_{x!=root}ans_{fa_x}-ans'_x​$
+修改一路暴跳父亲就可以，查询统计$\sum_{x!=root}ans_{fa_x}-ans'_x$
 
 然而这题要卡常……
 
