--- a/_posts/2019-01-17-[ZJOI2015]幻想乡战略游戏.md
+++ b/_posts/2019-01-17-[ZJOI2015]幻想乡战略游戏.md
@@ -80,7 +80,7 @@ tags:
 
 如果一步一步的求，每次的查询就会被卡成$O(nlogn)$的……
 
-进入子树的时候，可以从子树的重心开始求解，这样复杂度就变成了$O({logn}^2)​$的了，同时因为每次只改一个点，所以带权重心一般不会移动很远，这样可以从上一个查询的答案节点开始查询（小优化），最终复杂度$O(q{logn}^2)​$
+进入子树的时候，可以从子树的重心开始求解，这样复杂度就变成了$O({logn}^2)$的了，同时因为每次只改一个点，所以带权重心一般不会移动很远，这样可以从上一个查询的答案节点开始查询（小优化），最终复杂度$O(q\log^2n)$
 
 ### 代码
 
