--- a/_posts/2019-02-13-扩展Lucas略解.md
+++ b/_posts/2019-02-13-扩展Lucas略解.md
@@ -12,7 +12,7 @@ tags:
 ---
 ### $a.$
 
-要求$C_{n}^{m}\%p$的值，如果$p$是质数，可以用$Lucas$定理$O(logn)$解决
+要求$C_{n}^{m}\%p​$的值，如果$p​$是质数，可以用$Lucas​$定理$O(\log n)​$解决
 
 但是如果$p$不是质数怎么做呢
 
