--- a/_posts/2019-02-22-[CQOI2017]小Q的表格.md
+++ b/_posts/2019-02-22-[CQOI2017]小Q的表格.md
@@ -139,10 +139,10 @@ $\sum_{d=1}^{k}f(d,d)\sum_{i=1}^{\left\lfloor\frac{k}{d}\right\rfloor}\sum_{j=1}
 
 后面的部分可以预处理出来！这样就只需要一个整除分块了
 
-现在考虑一个支持单点修改和维护前缀和数据结构来维护$f(x,x)$
+现在考虑一个支持单点修改和维护前缀和数据结构来维护$f(x,x)​$
 
-- 我会树状数组！$O(logn)$的查询，$O(logn)$的修改，这样一次查询的复杂度就是$O(\sqrt n\times logn)​$，有点卡时间但是树状数组常数小（你懂我意思吧）
-- 我会分块！$O(1)$查询，$O(\sqrt n)$修改，这样一次查询复杂度就是$O(\sqrt n)$的，时间很充裕
+- 我会树状数组！$O(\log n)​$的查询，$O(\log n)​$的修改，这样一次查询的复杂度就是$O(\sqrt n\times \log n)​$，有点卡时间但是树状数组常数小（你懂我意思吧）
+- 我会分块！$O(1)​$查询，$O(\sqrt n)​$修改，这样一次查询复杂度就是$O(\sqrt n)​$的，时间很充裕
 
 实测分块比树状数组快$1s$左右，这里提供的是分块代码
 
