--- a/_posts/2019-02-26-[SDOI2015]序列统计.md
+++ b/_posts/2019-02-26-[SDOI2015]序列统计.md
@@ -61,9 +61,9 @@ tags:
 
 首先最简单的$dp$方程推出来：$f_{i,j\times S_k\%M}+=f_{i-1,j}$，时间复杂度是$O(NM\vert S\vert )$的
 
-发现每一步的转移都一样，可以用快速幂优化，时间复杂度是$O(M^2logn)$
+发现每一步的转移都一样，可以用快速幂优化，时间复杂度是$O(M^2\log n)$
 
-现在瓶颈在$M^2$了
+现在瓶颈在$M^2​$了
 
 发现$dp$方程是$f_i\times f_j=f_{ij}$
 
@@ -71,7 +71,7 @@ tags:
 
 如果是$f_i\times f_j=f_{i+j}$的话就好做多了，可以卷积了
 
-因为$x^i\times x^j=x^{i+j}$
+因为$x^i\times x^j=x^{i+j}​$
 
 所以可以把下标转换成某个数的多少次幂，并且$0\rightarrow M-1$都能被这个数的次幂表示
 
