--- a/_posts/2019-03-02-多项式全家桶.md
+++ b/_posts/2019-03-02-多项式全家桶.md
@@ -635,7 +635,7 @@ int main()
 
 考虑如果已知$f(l)\sim f(mid)$的值，就可以求出它们对于$f(mid+1)\sim f(r)$的贡献，对$x$的贡献即为$\sum_{i=l}^{mid}f(i)g(x-i)$
 
-这样就类似一个$CDQ$分治的过程，可以$O(n{logn}^2)$求解了
+这样就类似一个$CDQ$分治的过程，可以$O(n\log^2n)$求解了
 
 - ##### 代码
 
