--- a/_posts/2018-03-18-[LUOGU2766]最长不下降子序列问题.md
+++ b/_posts/2018-03-18-[LUOGU2766]最长不下降子序列问题.md
@@ -1,4 +1,5 @@
-﻿---
+---
+
 layout:     post
 title:      "[LUOGU2766]最长不下降子序列问题"
 date:       2018-03-18
@@ -62,13 +63,13 @@ $n\leq 500$
 
 主要是找序列的第一个数和最后一个数
 
-所以我们两次$dp$：第一次处理从数$i$向前最长的非降子序列（即$f[i]$），第二次处理从数$i$向后最长的非降子序列（即$g[i]$）
+所以我们两次$dp$：第一次处理从数$i$向前最长的非降子序列（即$f_i$），第二次处理从数$i$向后最长的非降子序列（即$g_i$）
 
-然后若$f[i]=s$，源点与$i$连
+然后若$f_i=s$，源点与$i$连
 
-若$g[i]=s$，汇点与$i$连
+若$g_i=s$，汇点与$i$连
 
-第2问连边容量都为1，第3问在第二问基础上把源点与最后一个数、第一个数与汇点连边容量改为$inf$（我代码里重建了边）
+第2问连边容量都为1，第3问在第二问基础上把源点与最后一个数、第一个数与汇点连边容量改为$inf​$（我代码里重建了边）
 
 问题就解决了
 
