--- a/_posts/2018-03-22-[SDOI2016]征途.md
+++ b/_posts/2018-03-22-[SDOI2016]征途.md
@@ -59,30 +59,30 @@ $s^{2}=\frac {(\overline v-v1)^{2}+(\overline v-v2)^{2}+...+(\overline v-vm)^{2}
 
 然后：$s^{2}=\frac {(\frac {\sum_{i=1}^{m}vi}{m} -v1)^{2}+(\frac {\sum_{i=1}^{m}vi}{m} -v2)^{2}+...+(\frac {\sum_{i=1}^{m}vi}{m} -vm)^{2}}{m}$
 
-展开：$s^{2}=\frac {m*\frac {(\sum_{i=1}^{m}vi)^{2}}{m^{2}}-2*\frac {(\sum_{i=1}^{m}vi)}{m}*(v1+v2+...+vm)+(v1^{2}+v2^{2}+...+vm^{2})}{m}$
+展开：$s^{2}=\frac {m\frac {(\sum_{i=1}^{m}vi)^{2}}{m^{2}}-2\frac {(\sum_{i=1}^{m}vi)}{m}(v1+v2+...+vm)+(v1^{2}+v2^{2}+...+vm^{2})}{m}​$
 
 然后可化为：
-$s^{2}=\frac {\frac {(\sum_{i=1}^{m}vi)^{2}}{m}-2*\frac {(\sum_{i=1}^{m}vi)^{2}}{m}+(v1^{2}+v2^{2}+...+vm^{2})}{m}$
+$s^{2}=\frac {\frac {(\sum_{i=1}^{m}vi)^{2}}{m}-2\frac {(\sum_{i=1}^{m}vi)^{2}}{m}+(v1^{2}+v2^{2}+...+vm^{2})}{m}$
 
 然后~~真TM麻烦~~：
-$s^{2}=-\frac {(\sum_{i=1}^{m}vi)^{2}}{m^{2}}+\frac {(v1^{2}+v2^{2}+...+vm^{2})}{m}$
+$s^{2}=-\frac {(\sum_{i=1}^{m}vi)^{2}}{m^{2}}+\frac {(v1^{2}+v2^{2}+...+vm^{2})}{m}​$
 
-还要$*m^2$
-$s^{2}*m^{2}=-(\sum_{i=1}^{m}vi)^{2}+m*(v1^{2}+v2^{2}+...+vm^{2})$
+还要$\times m^2$
+$s^{2}m^{2}=-(\sum_{i=1}^{m}vi)^{2}+m(v1^{2}+v2^{2}+...+vm^{2})$
 
 这样就好啦，你会发现式子右边第一项是个定值，而第二项我们可以用前缀和搞搞
 
-用$f[i][l]$表示前$i$段分为$l$天走的最小方差（这里也是平方了因为最后处理成方差了QAQ）
+用$f_{i,l}​$表示前$i​$段分为$l​$天走的最小方差（这里也是平方了因为最后处理成方差了QAQ）
 
-即有：$f[i][l]=min(f[i][l],f[j][l-1]+(sum[i]-sum[j])^{2})(0<=j<i)$（m可以最后乘上）
+即有：$f_{i,l}=min(f_{i,l},f_{j,l-1}+(sum_i-sum_j)^{2})(0\le j<i)$（$m$可以最后乘上）
 
-然后80分到手~~好我已经满足了~~
+然后$80$分到手~~好我已经满足了~~
 
 可以发现这个式子可以用斜率优化搞，即可以这么化：
 
-$f[i][l]+2*sum[i]*sum[j]=f[j][l-1]+sum[i]^{2}+sum[j]^{2}$
+$f_{i,l}+2sum_isum_j=f_{j,l-1}+{sum_i}^{2}+{sum_j}^{2}​$
 
-然后就是斜率优化套路了~~套路我还WA那么多次~~
+然后就是斜率优化套路了~~套路我还<code>WA</code>那么多次~~
 
 ### 代码
 ```
