--- a/_posts/2018-04-01-[NOI2009]管道取珠.md
+++ b/_posts/2018-04-01-[NOI2009]管道取珠.md
@@ -1,4 +1,5 @@
-﻿---
+---
+
 layout:     post
 title:      "[NOI2009]管道取珠"
 date:       2018-04-01
@@ -81,19 +82,19 @@ B
 
 然后考虑$dp$
 
-既然是两个人，$f[i][j][k][l]$表示第一个人第一个管道取前$i$个，第二个管道取前$j$个，第二个人第一个管道取前$k$个，第二个管道取前$l$个
+既然是两个人，$f_{i,j,k,l}​$表示第一个人第一个管道取前$i​$个，第二个管道取前$j​$个，第二个人第一个管道取前$k​$个，第二个管道取前$l​$个
 
-然后你会发现$n,m<=500$，空间炸了
+然后你会发现$n,m\le 500$，空间炸了
 
 为了使两个人取出的序列相同，前提是取得一样多，所以$i+j=k+l$
 
 所以可以优化掉一维
 
-然而在bzoj上这样已经可以过了，但luogu上空间还是炸
+然而在bzoj上这样已经可以过了，但$luogu$上空间还是炸
 
-发现$f[i][][]$是由$f[i][][]$或$f[i-1][][]$递推过来的
+发现$f_i$是由$f_i$或$f_{i-1}$递推过来的
 
-所以可以用滚动数组优化空间到$n^2$
+所以可以用滚动数组优化空间到$n^2​$
 
 ### 代码
 ```
