--- a/_posts/2018-06-19-[AHOI2001]多项式乘法.md
+++ b/_posts/2018-06-19-[AHOI2001]多项式乘法.md
@@ -43,9 +43,9 @@ tags:
 
 看到题第一眼，就知道这是个暴力处理多项式然后用$FFT$搞就行了……
 
-但是有许多坑点，比如输入字符串中没有'*'就什么也不输出~~题目就™不能讲清楚吗~~
+但是有许多坑点，比如输入字符串中没有<code>*</code>就什么也不输出~~题目就™不能讲清楚吗~~
 
-因为这个WA了好几次，又因为只有一个数据点，每次都提示输出多了，我也看不了别人代码对一下……
+因为这个<code>WA</code>了好几次，又因为只有一个数据点，每次都提示输出多了，我也看不了别人代码对一下……
 
 最后在网上找了一个博客，试了几组数据都正确~~并且ta还不能处理没有括号的情况~~
 
@@ -54,7 +54,7 @@ tags:
 if(ppos == std::string::npos) continue;
 ```
 ![](/img/qaq/675.jpg)
-这是干啥啊……似乎是判断有没有'*'？
+这是干啥啊……似乎是判断有没有<code>*</code>？
 
 然后加上就过了QAQ这种~~垃圾~~题还是别出了QAQ
 
