--- a/_posts/2018-08-12-2-SAT略解.md
+++ b/_posts/2018-08-12-2-SAT略解.md
@@ -15,11 +15,11 @@ $2-SAT$是一种特殊的逻辑判定问题
 
 emmmm先看一道题：
 >众所周知，Aufun有很多的Au~~不然怎么叫Aufun~~
-
+>
 >Aufun每天最大的乐趣就是把这些Au翻过来翻过去
-
+>
 >现在你已经知道m条关于这些Au的信息，每条信息告诉你标号为$X$ Au正/反的时候标号为$Y$ 的Au不能为正/反
-
+>
 >Aufun想问问你是否有一种情况ta 的Au满足这些条件，并让你随便构造出一种来
 
 ~~正解：以大量纸片人为交换代价让Aufun代你A这道题~~
@@ -80,15 +80,15 @@ emmmm有点了，我们可不可以通过连边来表示点与点之间的关系
 
 两个点的关系还有很多，列举几个（这里存在和不存在是一个点的两种状态）：
 
-$A,B$不能同时存在：$A->B',B->A'$
+$A,B$不能同时存在：$A\rightarrow B',B\rightarrow A'$
 
-$A,B$必须同时存在：$A->B,A'->B'$
+$A,B$必须同时存在：$A\rightarrow B,A'\rightarrow B'$
 
-$A,B$必须存在其中一个：$A'->B,B'->A$
+$A,B$必须存在其中一个：$A'\rightarrow B,B'\rightarrow A$
 
-$A,B$不能同时存在：$A->B',B->A'$
+$A,B$不能同时存在：$A\rightarrow B',B\rightarrow A'$
 
-$A$不能存在：$A->A'$
+$A$不能存在：$A\rightarrow A'$
 
 - ### 输出方案 二连击
 
@@ -96,7 +96,7 @@ $A$不能存在：$A->A'$
 
 也是很好解决的，$dfs$即可
 
-点从1~$2*n$枚举，如果这个点能选，就将ta相连的点都选上，就将ta相连的点的相连的点都选上，就将...
+点从$1\sim 2n$枚举，如果这个点能选，就将ta相连的点都选上，就将ta相连的点的相连的点都选上，就将...
 
 如果某个点发生冲突了（对立点被选了），这个点就不能选，与ta相连的点不能选，与ta相连的点的相连点不能选，与ta...
 
@@ -167,15 +167,15 @@ int main()
 
 但是$x$场地对应三种车怎么办呢？
 
-发现$x$场地的个数很少，最大才8个
+发现$x$场地的个数很少，最大才$8$个
 
 所以考虑枚举$x$场地的状态，比如这次可以让$x$场地对应$AB$车（就成了$c$场地），下次对应$BC$车（就成了$a$场地），再下次对应$AC$车（就成了$b$场地）
 
-这样复杂度是$O(3^{8}*(n+m))$，仍然过不了这道题
+这样复杂度是$O(3^{8}\times (n+m))​$，仍然过不了这道题
 
 发现$x$对应AC车的情况在前面两个枚举中都出现了，也就是说前面两个枚举把所有情况都包括了
 
-所以只用枚举前两个就行了，复杂度$O(2^{8}*(n+m))$
+所以只用枚举前两个就行了，复杂度$O(2^{8}\times (n+m))$
 
 #### 部分代码
 ```
