--- a/_posts/2018-09-02-[NOIP2017]列队.md
+++ b/_posts/2018-09-02-[NOIP2017]列队.md
@@ -1,4 +1,5 @@
-﻿---
+---
+
 layout:     post
 title:      "[NOIP2017]列队"
 date:       2018-09-02
@@ -68,7 +69,7 @@ Sylvia 所在的方阵中有$n \times m$名学生，方阵的行数为 $n$，列
 数据保证每一个事件满足 $1 \le x \le n,1 \le y \le m$
 
 ### 题解
-可以发现一个点出列，影响的只有ta在的这一行和最后一列（这里的行的范围都是$1->m-1$）
+可以发现一个点出列，影响的只有ta在的这一行和最后一列（这里的行的范围都是$1\rightarrow m-1$）
 
 假设出列位置为$(x,y)$
 
