--- a/_posts/2019-01-04-[POI2007]树Drz.md
+++ b/_posts/2019-01-04-[POI2007]树Drz.md
@@ -58,7 +58,7 @@ $h_i<L_j,h_i>R_j,L_j\le h_i\le R_j$
 
 $j$同理
 
-这样就可以用线段树+扫描线做了，写起来还是挺麻烦的~~写出一种情况然后<code>ctrl+A+C+V</code>改改就行了~~
+这样就可以用线段树+扫描线做了，写起来还是挺麻烦的~~写出一种情况然后<code>ctrl+C+V</code>改改就行了~~
 
 ### 代码
 ```c++
