--- a/img/题目背景.md
+++ b/img/题目背景.md
@@ -65,7 +65,7 @@
 #### 输出样例2
 
 ```plain
-744832841
+358955624
 ```
 
 #### 样例解释1
@@ -86,7 +86,7 @@ $(2,0,0)(0,1,0)(0,0,2)$，“头盘集”只有$1$个，贡献为$233$
 
 $(2,0,0)(0,2,0)(0,0,1)$，“头盘集”只有$1$个，贡献为$233$
 
-$(2,0,0)(0,2,0)(0,0,2)$，“头盘集”只有$0$个，贡献为$666$
+$(2,0,0)(0,2,0)(0,0,2)$，“头盘集”只有$0$个，贡献为$666​$
 
 #### 样例解释2
 
@@ -94,15 +94,15 @@ $(2,0,0)(0,2,0)(0,0,2)$，“头盘集”只有$0$个，贡献为$666$
 
 ### 数据范围与提示
 
-对于$1\%$的数据，$n\le 1,k\le 1$，如果你连这个分都懒得打我给您劈叉了
+对于$1\%$的数据，$n\le 1,k\le 1​$，如果你连这个分都懒得打我给您劈叉了
 
 对于$20\%$的数据，$n\le 100,k\le 1000,V\le 50$
 
 对于$50\%​$的数据，$k\le 5000​$
 
-对于另$20\%​$的数据，对于$1\le i\le k​$，$P_i=0​$，放心这里的数据有梯度（并不）
+对于另$20\%$的数据，对于$1\le i\le k$，$P_i=0$，放心这里的数据有梯度（并不）
 
-对于$100\%$的数据，$n\le 10^7,k\le 10^5,V\le 150$
+对于$100\%$的数据，$n\le 10^7,k\le 10^5,V\le 150$，放心这里的数据也有梯度
 
 ### 题外话
 
