--- a/_posts/9999-12-31-常见错误.md
+++ b/_posts/9999-12-31-常见错误.md
@@ -41,6 +41,9 @@ tags:
 - 指针移动的时候注意不要出边界
 - 写有返回值的函数一定要返回值
 - 求叉积的时候注意数据范围，小心乘爆
+- 文件操作检查是否写了<code>.in</code><code>.out</code>
+- 测**大**样例的时候注意要用文件操作
+- 
 
 [$Cansult$](https://cansult.ga/22925.html)
 
