--- a/_posts/2019-03-02-多项式全家桶.md
+++ b/_posts/2019-03-02-多项式全家桶.md
@@ -18,144 +18,9 @@ tags:
 
 $FFT,NTT​$啥的就是解决这个的……怎么证明求解就咕了
 
-- ##### $FFT$代码
+- ##### [$FFT$代码](https://github.com/A-Failure/Dispwnl-s-codes/blob/master/_posts/FFT%E6%A8%A1%E6%9D%BF.md)
 
-```c++
-# include<iostream>
-# include<cstring>
-# include<cstdio>
-# include<cmath>
-# include<algorithm>
-using namespace std;
-const int MAX=5e6+5;
-const double Pi=acos(-1.0);
-struct Complex{
-	double x,y;
-	Complex(double X=0,double Y=0) {x=X,y=Y;}
-}a[MAX],b[MAX];
-int n,m,lim=1,L;
-int R[MAX];
-Complex operator+ (Complex x,Complex y) {return Complex(x.x+y.x,x.y+y.y);}
-Complex operator- (Complex x,Complex y) {return Complex(x.x-y.x,x.y-y.y);}
-Complex operator* (Complex x,Complex y) {return Complex(x.x*y.x-x.y*y.y,x.y*y.x+x.x*y.y);}
-int read()
-{
-	int x(0);
-	char ch=getchar();
-	for(;!isdigit(ch);ch=getchar());
-	for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
-	return x;
-}
-void FFT(Complex *A,int tt=1)
-{
-	for(int i=0;i<lim;++i)
-	  if(i<R[i]) swap(A[i],A[R[i]]);
-	for(int i=1;i<lim;i<<=1)
-	  {
-	  	Complex w1=Complex(cos(Pi/i),tt*sin(Pi/i));
-	  	for(int l=i<<1,j=0;j<lim;j+=l)
-	  	  {
-	  	  	Complex w=Complex(1,0),x,y;
-	  	  	for(int k=0;k<i;++k,w=w*w1)
-	  	  	  x=A[j+k],y=w*A[i+j+k],A[j+k]=x+y,A[i+j+k]=x-y;
-		  }
-	  }
-}
-int main()
-{
-	n=read(),m=read();
-	for(int i=0;i<=n;++i)
-	  a[i].x=read();
-	for(int i=0;i<=m;++i)
-	  b[i].x=read();
-	while(lim<=n+m) lim<<=1,++L;
-	for(int i=0;i<lim;++i)
-	  R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
-	FFT(a),FFT(b);
-	for(int i=0;i<=lim;++i)
-	  a[i]=a[i]*b[i];
-	FFT(a,-1);
-	for(int i=0;i<=n+m;++i)
-	  printf("%d ",int(a[i].x/lim+0.5));
-	return 0;
-}
-```
-
-- ##### $NTT$代码
-
-```c++
-# include<iostream>
-# include<cstring>
-# include<cstdio>
-# include<cmath>
-# include<algorithm>
-# define LL long long
-using namespace std;
-const int MAX=5e6+1;
-const int mod=998244353;
-int n,m,l,lim=1;
-int a[MAX],b[MAX],R[MAX];
-int read()
-{
-	int x=0;
-	char ch=getchar();
-	for(;!isdigit(ch);ch=getchar());
-	for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
-	return x;
-}
-int Pow(int x,int b)
-{
-	int ans=1;
-	for(;b;b>>=1,x=1ll*x*x%mod)
-	  if(b&1) ans=1ll*ans*x%mod;
-	return ans;
-}
-void NTT(int *A,int tt=1)
-{
-	for(int i=0;i<lim;++i)
-	  if(i<R[i]) swap(A[i],A[R[i]]);
-	for(int i=1,w1;i<lim;i<<=1)
-	  {
-	  	w1=Pow(3,(mod-1)/(i<<1));
-	  	for(int l=i<<1,w,j=0;j<lim;j+=l)
-	  	  {
-	  	  	w=1;
-	  	  	for(int k=0,x,y;k<i;++k,w=1ll*w*w1%mod)
-	  	  	  {
-	  	  	  	x=A[j+k],y=1ll*w*A[j+i+k]%mod,A[j+k]=x+y,A[j+i+k]=x-y+mod;
-	  	  	  	if(A[j+k]>=mod) A[j+k]-=mod;
-	  	  	  	if(A[i+j+k]>=mod) A[i+j+k]-=mod;
-			  }
-		  }
-	  }
-	if(tt==-1)
-	{
-		reverse(A+1,A+lim);
-		for(int i=0,G=Pow(lim,mod-2);i<lim;++i)
-		  A[i]=1ll*A[i]*G%mod;
-	}
-}
-int main()
-{
-	n=read(),m=read();
-	for(int i=0;i<=n;++i)
-	  a[i]=read();
-	for(int i=0;i<=m;++i)
-	  b[i]=read();
-	while(lim<=n+m) lim<<=1,++l;
-	for(int i=0;i<lim;++i)
-	  R[i]=(R[i>>1]>>1)|((i&1)<<(l-1));
-	NTT(a),NTT(b);
-	for(int i=0;i<=lim;++i)
-	  a[i]=1ll*a[i]*b[i]%mod;
-	NTT(a,-1);
-	for(int i=0;i<=n+m;++i)
-	  printf("%d ",a[i]);
-	return 0;
-}
-```
-
-
+- ##### [$NTT$代码](https://github.com/A-Failure/Dispwnl-s-codes/blob/master/_posts/NTT%E6%A8%A1%E6%9D%BF.md)
 
 - #### 多项式求逆
 
@@ -195,84 +60,7 @@ $g^2(x)+g'^2(x)-2g(x)g'(x)\equiv 0(\mod x^n)​$
 
 发现$f(x)​$在模$x^1​$的意义下逆元为常数项的逆元，所以可以用常数项推出$f(x)​$在模$x^n​$意义的逆元，如果常数项没有逆元，$f(x)​$也就没有逆元了
 
-- ##### 代码
-
-```c++
-# include<iostream>
-# include<cstring>
-# include<cstdio>
-# include<algorithm>
-using namespace std;
-const int MAX=4e5+5,mod=998244353;
-int n,lim=1,L;
-int R[MAX],A[MAX],a[MAX],b[MAX];
-int Pow(int a,int b)
-{
-	int ans=1;
-	for(;b;b>>=1,a=1ll*a*a%mod)
-	  if(b&1) ans=1ll*ans*a%mod;
-	return ans;
-}
-void NTT(int *A,int tt=1)
-{
-	for(int i=0;i<lim;++i)
-	  if(i<R[i]) swap(A[i],A[R[i]]);
-	for(int i=1,w1;i<lim;i<<=1)
-	  {
-	  	w1=Pow(3,(mod-1)/(i<<1));
-	  	for(int l=i<<1,w,j=0;j<lim;j+=l)
-	  	  {
-	  	  	w=1;
-	  	  	for(int k=0,x,y;k<i;++k,w=1ll*w*w1%mod)
-	  	  	  {
-	  	  	  	x=A[j+k],y=1ll*w*A[i+j+k]%mod,A[j+k]=x+y,A[i+j+k]=x-y+mod;
-	  	  	  	if(A[j+k]>=mod) A[j+k]-=mod;
-	  	  	  	if(A[i+j+k]>=mod) A[i+j+k]-=mod;
-			  }
-		  }
-	  }
-	  if(tt==-1)
-	  {
-	  	reverse(A+1,A+lim);
-	  	for(int i=0,G=Pow(lim,mod-2);i<lim;++i)
-	  	  A[i]=1ll*G*A[i]%mod;
-	  }
-}
-int read()
-{
-	int x(0);
-	char ch=getchar();
-	for(;!isdigit(ch);ch=getchar());
-	for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
-	return x;
-}
-void Inv(int *A,int n)
-{
-	if(n==1) return void(b[0]=Pow(A[0],mod-2));
-	Inv(A,n+1>>1),lim=1,L=0;
-	while(lim<=2*n-1) lim<<=1,++L;
-	for(int i=0;i<=lim;++i)
-	  a[i]=0,R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
-	for(int i=0;i<n;++i)
-	  a[i]=A[i];
-	NTT(a),NTT(b);
-	for(int i=0;i<=lim;++i)
-	  b[i]=1ll*(2-1ll*a[i]*b[i]%mod+mod)%mod*b[i]%mod;
-	NTT(b,-1);
-	for(int i=n;i<=lim;++i)
-	  b[i]=0;
-}
-int main()
-{
-	n=read();
-	for(int i=0;i<n;++i)
-	  A[i]=read();
-	Inv(A,n);
-	for(int i=0;i<n;++i)
-	  printf("%d ",b[i]);
-	return 0;
-}
-```
+- ##### [代码](https://github.com/A-Failure/Dispwnl-s-codes/blob/master/_posts/%E5%A4%9A%E9%A1%B9%E5%BC%8F%E6%B1%82%E9%80%86.md)
 
 - #### 多项式开根
 
@@ -286,7 +74,7 @@ int main()
 
 $g'^2(x)-f(x)\equiv 0(\mod x^{\left\lceil\frac{n}{2}\right\rceil})$
 
-是不是又可以平方了？$(g'^2(x)-f(x))^2\equiv 0(\mod x^n)$
+是不是又可以平方了？$(g'^2(x)-f(x))^2\equiv 0(\mod x^n)​$
 
 拆开得
 
@@ -298,105 +86,7 @@ $(\frac{g'^2(x)+f(x)}{2g'(x)})^2\equiv f(x)(\mod x^n)$
 
 左边的那一坨就是要求的$g(x)​$了
 
-- ##### 代码
-
-```c++
-# include<iostream>
-# include<cstring>
-# include<cstdio>
-# include<algorithm>
-using namespace std;
-const int MAX=4e5+5,mod=998244353,inv2=499122177;
-int n,lim=1,L;
-int A[MAX],a[MAX],b[MAX],c[MAX],R[MAX];
-int read()
-{
-	int x(0);
-	char ch=getchar();
-	for(;!isdigit(ch);ch=getchar());
-	for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
-	return x;
-}
-int Pow(int a,int b)
-{
-	int ans=1;
-	for(;b;b>>=1,a=1ll*a*a%mod)
-	  if(b&1) ans=1ll*ans*a%mod;
-	return ans;
-}
-void NTT(int *A,int tt=1)
-{
-	for(int i=0;i<lim;++i)
-	  if(i<R[i]) swap(A[i],A[R[i]]);
-	for(int i=1,w1;i<lim;i<<=1)
-	  {
-	  	w1=Pow(3,(mod-1)/(i<<1));
-	  	for(int l=i<<1,j=0,w;j<lim;j+=l)
-	  	  {
-	  	  	w=1;
-	  	  	for(int k=0,x,y;k<i;++k,w=1ll*w*w1%mod)
-	  	  	  {
-	  	  	  	x=A[j+k],y=1ll*w*A[i+j+k]%mod,A[j+k]=x+y,A[i+j+k]=x-y+mod;
-	  	  	  	if(A[j+k]>=mod) A[j+k]-=mod;
-	  	  	  	if(A[i+j+k]>=mod) A[i+j+k]-=mod;
-			  }
-		  }
-	  }
-	if(tt==-1)
-	{
-		reverse(A+1,A+lim);
-		for(int i=0,G=Pow(lim,mod-2);i<lim;++i)
-		  A[i]=1ll*A[i]*G%mod;
-	}
-}
-void Inv(int *A,int *b,int n)
-{
-	if(n==1) return void(b[0]=Pow(A[0],mod-2));
-	Inv(A,b,n+1>>1),lim=1,L=0;
-	while(lim<=2*n-1) lim<<=1,++L;
-	for(int i=0;i<=lim;++i)
-	  a[i]=0,R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
-	for(int i=0;i<n;++i)
-	  a[i]=A[i];
-	NTT(a),NTT(b);
-	for(int i=0;i<=lim;++i)
-	  b[i]=1ll*(2-1ll*a[i]*b[i]%mod+mod)%mod*b[i]%mod;
-	NTT(b,-1);
-	for(int i=n;i<=lim;++i)
-	  b[i]=0;
-}
-void Sqrt(int *A,int n)
-{
-	if(n==1) return void(b[0]=1);
-	Sqrt(A,n+1>>1);
-	for(int i=0;i<=(n<<1);++i)
-	  c[i]=0;
-	Inv(b,c,n),lim=1,L=0;
-	while(lim<=2*n-1) lim<<=1,++L;
-	for(int i=0;i<=lim;++i)
-	  a[i]=0,R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
-	for(int i=0;i<n;++i)
-	  a[i]=A[i];
-	NTT(a),NTT(c);
-	for(int i=0;i<=lim;++i)
-	  a[i]=1ll*c[i]*a[i]%mod*inv2%mod;
-	NTT(a,-1);
-	for(int i=0;i<n;++i)
-	  b[i]=(1ll*b[i]*inv2%mod+a[i])%mod;
-}
-int main()
-{
-	n=read();
-	for(int i=0;i<n;++i)
-	  A[i]=read();
-	Sqrt(A,n);
-	for(int i=0;i<n;++i)
-	  printf("%d ",b[i]);
-	return 0;
-}
-```
-
-
+- ##### [代码](https://github.com/A-Failure/Dispwnl-s-codes/blob/master/_posts/%E5%A4%9A%E9%A1%B9%E5%BC%8F%E5%BC%80%E6%A0%B9.md)
 
 - #### 多项式除法
 
@@ -414,105 +104,11 @@ $f'(x)=g'(x)G'(x)+x^{n-k+1}F'(x)$（$k$是$g(x)$的最高次）
 
 $x^{n-k+1}F'(x)​$的最低次项肯定要不小于$n-k+1​$，而要求的$G(x)​$的最高次项肯定要小于$n-k+1​$的
 
-所以在模$x^{n-k+1}$的情况下，$x^{n-k+1}F'(x)$可以被忽略而不影响$G(x)$
+所以在模$x^{n-k+1}​$的情况下，$x^{n-k+1}F'(x)​$可以被忽略而不影响$G(x)​$
 
-所以多项式求一下$g'(x)$的逆元，然后求出$G'(x)$从而得到$G(x)$
+所以多项式求一下$g'(x)​$的逆元，然后求出$G'(x)​$从而得到$G(x)​$
 
-- ##### 代码
-
-```c++
-# include<iostream>
-# include<cstring>
-# include<cstdio>
-# include<algorithm>
-using namespace std;
-const int MAX=4e5+5,mod=998244353;
-int n,m,lim=1,L;
-int R[MAX],a[MAX],b[MAX],A[MAX],B[MAX];
-int read()
-{
-	int x(0);
-	char ch=getchar();
-	for(;!isdigit(ch);ch=getchar());
-	for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
-	return x;
-}
-int Pow(int a,int b)
-{
-	int ans=1;
-	for(;b;b>>=1,a=1ll*a*a%mod)
-	  if(b&1) ans=1ll*ans*a%mod;
-	return ans;
-}
-void NTT(int *A,int tt=1)
-{
-	for(int i=0;i<lim;++i)
-	  if(i<R[i]) swap(A[i],A[R[i]]);
-	for(int i=1,w1;i<lim;i<<=1)
-	  {
-	  	w1=Pow(3,(mod-1)/(i<<1));
-	  	for(int l=i<<1,w,j=0;j<lim;j+=l)
-	  	  {
-	  	  	w=1;
-	  	  	for(int k=0,x,y;k<i;++k,w=1ll*w*w1%mod)
-	  	  	  {
-	  	  	  	x=A[j+k],y=1ll*w*A[i+j+k]%mod,A[j+k]=x+y,A[i+j+k]=x-y+mod;
-	  	  	  	if(A[j+k]>=mod) A[j+k]-=mod;
-	  	  	  	if(A[i+j+k]>=mod) A[i+j+k]-=mod;
-			  }
-		  }
-	  }
-	  if(tt==-1)
-	  {
-	  	reverse(A+1,A+lim);
-	  	for(int i=0,G=Pow(lim,mod-2);i<lim;++i)
-	  	  A[i]=1ll*G*A[i]%mod;
-	  }
-}
-void Inv(int *A,int *b,int n)
-{
-	if(n==1) return void(b[0]=Pow(A[0],mod-2));
-	Inv(A,b,n+1>>1),lim=1,L=0;
-	while(lim<=2*n) lim<<=1,++L;
-	for(int i=0;i<=lim;++i)
-	  a[i]=0,R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
-	for(int i=0;i<n;++i)
-	  a[i]=A[i];
-	NTT(a),NTT(b);
-	for(int i=0;i<=lim;++i)
-	  b[i]=1ll*(2-1ll*b[i]*a[i]%mod+mod)%mod*b[i]%mod;
-	NTT(b,-1);
-	for(int i=n;i<=lim;++i)
-	  b[i]=0;
-}
-void Div(int *A,int *B)
-{
-	Inv(B,b,n-m+1),lim=1,L=0;
-	while(lim<=2*(n-m+1)) lim<<=1,++L;
-	for(int i=0;i<=lim;++i)
-	  a[i]=0,R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
-	for(int i=0;i<=n-m+1;++i)
-	  a[i]=A[i];
-	NTT(a),NTT(b);
-	for(int i=0;i<=lim;++i)
-	  a[i]=1ll*a[i]*b[i]%mod;
-	NTT(a,-1),reverse(a,a+n-m+1);
-}
-int main()
-{
-	n=read(),m=read();
-	for(int i=0;i<=n;++i)
-	  A[i]=read();
-	for(int i=0;i<=m;++i)
-	  B[i]=read();
-	reverse(A,A+1+n),reverse(B,B+1+m),Div(A,B);
-	for(int i=0;i<n-m+1;++i)
-	  printf("%d ",a[i]);
-	return 0;
-}
-```
-
-
+- ##### [代码](https://github.com/A-Failure/Dispwnl-s-codes/blob/master/_posts/%E5%A4%9A%E9%A1%B9%E5%BC%8F%E9%99%A4%E6%B3%95.md)
 
 - #### 多项式取模
 
@@ -520,112 +116,7 @@ int main()
 
 求出上面的$G(x)$然后求$F(x)=f(x)-g(x)G(x)$即可
 
-- ##### 代码
-
-```c++
-# include<iostream>
-# include<cstring>
-# include<cstdio>
-# include<algorithm>
-using namespace std;
-const int MAX=4e5+5,mod=998244353;
-int n,m,lim=1,L;
-int R[MAX],a[MAX],b[MAX],A[MAX],B[MAX];
-int read()
-{
-	int x(0);
-	char ch=getchar();
-	for(;!isdigit(ch);ch=getchar());
-	for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
-	return x;
-}
-int Pow(int a,int b)
-{
-	int ans=1;
-	for(;b;b>>=1,a=1ll*a*a%mod)
-	  if(b&1) ans=1ll*ans*a%mod;
-	return ans;
-}
-void NTT(int *A,int tt=1)
-{
-	for(int i=0;i<lim;++i)
-	  if(i<R[i]) swap(A[i],A[R[i]]);
-	for(int i=1,w1;i<lim;i<<=1)
-	  {
-	  	w1=Pow(3,(mod-1)/(i<<1));
-	  	for(int l=i<<1,w,j=0;j<lim;j+=l)
-	  	  {
-	  	  	w=1;
-	  	  	for(int k=0,x,y;k<i;++k,w=1ll*w*w1%mod)
-	  	  	  {
-	  	  	  	x=A[j+k],y=1ll*w*A[i+j+k]%mod,A[j+k]=x+y,A[i+j+k]=x-y+mod;
-	  	  	  	if(A[j+k]>=mod) A[j+k]-=mod;
-	  	  	  	if(A[i+j+k]>=mod) A[i+j+k]-=mod;
-			  }
-		  }
-	  }
-	  if(tt==-1)
-	  {
-	  	reverse(A+1,A+lim);
-	  	for(int i=0,G=Pow(lim,mod-2);i<lim;++i)
-	  	  A[i]=1ll*G*A[i]%mod;
-	  }
-}
-void Inv(int *A,int *b,int n)
-{
-	if(n==1) return void(b[0]=Pow(A[0],mod-2));
-	Inv(A,b,n+1>>1),lim=1,L=0;
-	while(lim<=2*n) lim<<=1,++L;
-	for(int i=0;i<=lim;++i)
-	  a[i]=0,R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
-	for(int i=0;i<n;++i)
-	  a[i]=A[i];
-	NTT(a),NTT(b);
-	for(int i=0;i<=lim;++i)
-	  b[i]=1ll*(2-1ll*b[i]*a[i]%mod+mod)%mod*b[i]%mod;
-	NTT(b,-1);
-	for(int i=n;i<=lim;++i)
-	  b[i]=0;
-}
-void Div(int *A,int *B)
-{
-	Inv(B,b,n-m+1),lim=1,L=0;
-	while(lim<=2*(n-m+1)) lim<<=1,++L;
-	for(int i=0;i<=lim;++i)
-	  a[i]=0,R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
-	for(int i=0;i<=n-m+1;++i)
-	  a[i]=A[i];
-	NTT(a),NTT(b);
-	for(int i=0;i<=lim;++i)
-	  a[i]=1ll*a[i]*b[i]%mod;
-	NTT(a,-1),reverse(a,a+n-m+1);
-}
-int main()
-{
-	n=read(),m=read();
-	for(int i=0;i<=n;++i)
-	  A[i]=read();
-	for(int i=0;i<=m;++i)
-	  B[i]=read();
-	reverse(A,A+1+n),reverse(B,B+1+m),Div(A,B);
-	for(int i=0;i<n-m+1;++i)
-	  printf("%d ",a[i]);
-	printf("\n");
-	reverse(A,A+1+n),reverse(B,B+1+m);
-	while(lim<=n) lim<<=1,++L;
-	for(int i=n-m+1;i<=lim;++i)
-	  a[i]=0;
-	for(int i=0;i<=lim;++i)
-	  R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
-	NTT(B),NTT(a);
-	for(int i=0;i<=lim;++i)
-	  a[i]=1ll*a[i]*B[i]%mod;
-	NTT(a,-1);
-	for(int i=0;i<=m-1;++i)
-	  printf("%d ",(A[i]-a[i]+mod)%mod);
-	return 0;
-}
-```
+- ##### [代码](https://github.com/A-Failure/Dispwnl-s-codes/blob/master/_posts/%E5%A4%9A%E9%A1%B9%E5%BC%8F%E5%8F%96%E6%A8%A1.md)
 
 - #### 分治$FFT$（多项式分治）
 
@@ -633,105 +124,17 @@ int main()
 
 如果有$f(i)=\sum_{j=1}^{i}f(i-j)g(j)$，并且已经知道$g(x)$每一项的系数，现在要快速求解$f(x)$的每一项系数，其中$f(0)=1$
 
-考虑如果已知$f(l)\sim f(mid)$的值，就可以求出它们对于$f(mid+1)\sim f(r)$的贡献，对$x$的贡献即为$\sum_{i=l}^{mid}f(i)g(x-i)$
+考虑如果已知$f(l)\sim f(mid)​$的值，就可以求出它们对于$f(mid+1)\sim f(r)​$的贡献，对$x​$的贡献即为$\sum_{i=l}^{mid}f(i)g(x-i)​$
 
 这样就类似一个$CDQ$分治的过程，可以$O(n\log^2n)$求解了
 
-- ##### 代码
-
-```c++
-// luogu-judger-enable-o2
-# include<iostream>
-# include<cstring>
-# include<cstdio>
-# include<algorithm>
-using namespace std;
-const int MAX=4e5+5,mod=998244353;
-int n,lim=1,L;
-int R[MAX],a[MAX],b[MAX],c[MAX],d[MAX],inv[MAX];
-int read()
-{
-	int x(0);
-	char ch=getchar();
-	for(;!isdigit(ch);ch=getchar());
-	for(;isdigit(ch);x=x*10+ch-48,ch=getchar());
-	return x;
-}
-int Pow(int a,int b)
-{
-	int ans=1;
-	for(;b;b>>=1,a=1ll*a*a%mod)
-	  if(b&1) ans=1ll*a*ans%mod;
-	return ans;
-}
-void NTT(int *A,int tt=1)
-{
-	for(int i=0;i<lim;++i)
-	  if(i<R[i]) swap(A[i],A[R[i]]);
-	for(int i=1,w1;i<lim;i<<=1)
-	  {
-	  	w1=inv[i<<1];
-	  	for(int l=i<<1,j=0,w;j<lim;j+=l)
-	  	  {
-	  	  	w=1;
-	  	  	for(int k=0,x,y;k<i;++k,w=1ll*w*w1%mod)
-	  		  {
-	  			x=A[j+k],y=1ll*w*A[i+j+k]%mod,A[j+k]=x+y,A[i+j+k]=x-y+mod;
-	  			if(A[j+k]>=mod) A[j+k]-=mod;
-	  			if(A[i+j+k]>=mod) A[i+j+k]-=mod;
-			  }
-		  }
-	  }
-	if(tt==-1)
-	{
-		reverse(A+1,A+lim);
-		for(int i=0,G=Pow(lim,mod-2);i<lim;++i)
-		  A[i]=1ll*A[i]*G%mod;
-	}
-}
-void Solve(int l=0,int r=n-1)
-{
-	if(l>=r) return;
-	int mid(l+r>>1);
-	Solve(l,mid);
-	lim=1,L=0;
-	while(lim<=(r-l+1)) lim<<=1,++L;
-	for(int i=0;i<=lim;++i)
-	  c[i]=d[i]=0,R[i]=(R[i>>1]>>1)|((i&1)<<L-1);
-	for(int i=l;i<=mid;++i)
-	  c[i-l]=b[i];
-	for(int i=0;i<=r-l;++i)
-	  d[i]=a[i+1];
-	NTT(c),NTT(d);
-	for(int i=0;i<=lim;++i)
-	  c[i]=1ll*c[i]*d[i]%mod;
-	NTT(c,-1);
-	for(int i=mid+1,j=mid-l;i<=r;++i,++j)
-	  {
-	  	b[i]+=c[j];
-	  	if(b[i]>=mod) b[i]-=mod;
-	  }
-	Solve(mid+1,r); 
-}
-int main()
-{
-	n=read();
-	for(int i=1;i<n;++i)
-	  a[i]=read();
-	for(int i=1,N=n<<2;i<=N;i<<=1)
-	  inv[i]=Pow(3,(mod-1)/i);
-	b[0]=1,Solve();
-	for(int i=0;i<n;++i)
-	  printf("%d ",b[i]);
-	return 0;
-}
-```
+- ##### [代码](https://github.com/A-Failure/Dispwnl-s-codes/blob/master/_posts/%E5%88%86%E6%B2%BBFFT%EF%BC%88%E5%A4%9A%E9%A1%B9%E5%BC%8F%E5%88%86%E6%B2%BB%EF%BC%89.md)
 
 ### 生成函数
 
 - #### 普通型生成函数
 
-对于一个数列，它的普通型生成函数就是$\sum_{i=0}^{∞}a_ix^i$
+对于一个数列，它的普通型生成函数就是$\sum_{i=0}^{∞}a_ix^i​$
 
 考虑这么一个问题：
 
