--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -843,5 +843,19 @@ $Asia$&$fuge$：艹
 
 路人视角![](/img/qwq/old.png)
 
-[$Cansult$的日记 比我的有意思多了](https://cansult.ga/3632.html)
+### $03.05$
+
+$Refun$：哎下次我带你去吃个$36$块钱的自助餐，在xxxx旁边，甚至还有蟑螂
+
+$fuge$（吃惊）：这太“贵”了，$3$8块钱？
+
+$Refun​$（用手比）：这么小
+
+$fuge$：$3$8块钱？
+
+$Refun​$：这么小
+
+我：？？？一只蟑螂$38$？
+
+[$Cansult​$的日记 比我的有意思多了](https://cansult.ga/3632.html)
 
