--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -857,5 +857,19 @@ $Refun​$：这么小
 
 我：？？？一只蟑螂$38$？
 
-[$Cansult​$的日记 比我的有意思多了](https://cansult.ga/3632.html)
+### $03.06$
+
+我去上厕所
+
+出来洗手的时候听见$Asia$和昊哥的对话：
+
+$Asia$：欸咱把$gayge$杯子里的水倒掉吧
+
+昊哥：好
+
+然后我出去看见昊哥舞着个盆（？）
+
+~~人赃俱获~~
+
+[$Cansult$的日记 比我的有意思多了](https://cansult.ga/3632.html)
 
