--- a/_posts/9999-12-31-日记+机房趣事.md
+++ b/_posts/9999-12-31-日记+机房趣事.md
@@ -871,5 +871,15 @@ $Asia$：欸咱把$gayge$杯子里的水倒掉吧
 
 ~~人赃俱获~~
 
+### $03.09$
+
+$fuge$：分治$FFT$可以用$K-D\ Tree$做吧
+
+~~CDQ能做的K-D Tree都能做~~
+
+### $03.11$
+
+
+
 [$Cansult$的日记 比我的有意思多了](https://cansult.ga/3632.html)
 
