--- a/_posts/2019-03-14-[BZOJ4170]极光.md
+++ b/_posts/2019-03-14-[BZOJ4170]极光.md
@@ -25,7 +25,7 @@ tags:
 
 raze值为两者位置差与数值差的和：
 
-graze(x,y)=|x-y|+|a[x]-a[y]|。
+$graze(x,y)=\vert x-y\vert +\vert a[x]-a[y]\vert$。
 
 要想破解天罚，就必须支持2种操作（k都是正整数）：
 
